--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -825,6 +825,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"ଆପଣ ଏହି PIN ଅନ୍ୟ ଡିଭାଇସ୍‌ରେ ମଧ୍ୟ ଟାଇପ୍‌ କରିବା ଆବଶ୍ୟକ କରିପାରନ୍ତି।"</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"ଏହି ପାସ୍‌-କୀକୁ ଅନ୍ୟ ଡିଭାଇସ୍‌ରେ ମଧ୍ୟ ଟାଇପ୍‌ କରିବା ଆବଶ୍ୟକ ହୋଇପରେ।"</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"ଏହା ସହ ପେୟାର୍‌ କରିବାକୁ:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;ନିଶ୍ଚିତ କରନ୍ତୁ ଏହା ଦେଖାଉଛି ପାସ୍‌‌କୀ:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"କୋର୍ଡିନେଟ କରାଯାଇଥିବା ସେଟ ସହ ପେୟାର କରିବାକୁ ସୁନିଶ୍ଚିତ କରନ୍ତୁ"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"ଏହାଙ୍କ ପାଖରୁ:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;ଏହି ଡିଭାଇସ୍‌ ସହ ପେୟାର୍‌ କରିବେ?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"ପେୟାର୍‌ କରିବା ପାଇଁ:<xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g>ଏହା ଉପରେ ଟାଇପ୍ କରନ୍ତୁ:<xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g>, ତା’ପରେ ରିଟର୍ନ କିମ୍ୱା ଏଣ୍ଟର୍ ଦାବନ୍ତୁ।"</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"ଆପଣଙ୍କ ଯୋଗାଯୋଗ ଓ କଲ୍‌ ହିଷ୍ଟୋରୀକୁ ଆକ୍ସେସ୍ କରିବାର ଅନୁମତି‌ ଦିଅନ୍ତୁ"</string>
@@ -858,6 +859,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"ସଂଯୋଗ କରିପାରୁନାହିଁ। ପୁଣିଥରେ ଚେଷ୍ଟା କରନ୍ତୁ।"</string>
     <string name="device_details_title" msgid="1155622417516195481">"ଡିଭାଇସ୍‌ର ବିବରଣୀ"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"ଡିଭାଇସ୍‌ର ବ୍ଲୁଟୁଥ ଠିକଣା ହେଉଛି: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"ଡିଭାଇସର ବ୍ଲୁଟୁଥ ଠିକଣା:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"ଡିଭାଇସ୍‌ଟିକୁ ଭୁଲିଯିବେ?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"ଆସୋସିଏସନକୁ କାଢ଼ି ଦିଅନ୍ତୁ"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"ଆପକୁ ବିଚ୍ଛିନ୍ନ କରିବେ?"</string>
@@ -890,6 +892,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"ସେଟିଙ୍ଗଗୁଡ଼ିକ ମନେରଖ"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"ସର୍ବାଧିକ ସଂଯୁକ୍ତ ହୋଇଥିବା ବ୍ଲୁଟୂଥ୍‍‌ ଅଡିଓ ଡିଭାଇସ୍‌ଗୁଡ଼ିକ"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"ସଂଯୁକ୍ତ ବ୍ଲୁଟୂଥ୍‍‌ ଅଡିଓ ଡିଭାଇସ୍‌ଗୁଡ଼ିକର ସର୍ବାଧିକ ସଂଖ୍ୟା ବାଛନ୍ତୁ"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"NFC ଷ୍ଟାକ୍ ଡିବଗ୍ ଲଗ୍"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC ଷ୍ଟାକ୍ ଲଗିଂ ଲେଭେଲକୁ ବଢ଼ାନ୍ତୁ"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"କାଷ୍ଟ"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"ମିରର୍"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"ୱେୟାରଲେସ୍‌ ପ୍ରଦର୍ଶନ ସକ୍ଷମ କରନ୍ତୁ"</string>
@@ -976,7 +980,7 @@
     <string name="wifi_cellular_data_fallback_summary" msgid="7039944853033554386">"Wi‑Fiର ଇଣ୍ଟରନେଟ ଆକ୍ସେସ ନଥିବାବେଳେ ମୋବାଇଲ ଡାଟା ବ୍ୟବହାର କରନ୍ତୁ। ଡାଟା ବ୍ୟବହାର ଦେୟ ଲାଗୁ ହୋଇପାରେ।"</string>
     <string name="wifi_add_network" msgid="4178564862173751181">"ନେଟ୍‌ୱାର୍କ ଯୋଗ କରନ୍ତୁ"</string>
     <string name="wifi_configure_settings_preference_title" msgid="2536725796700696566">"ୱାଇ-ଫାଇ ପସନ୍ଦ"</string>
-    <string name="wifi_configure_settings_preference_summary_wakeup_on" msgid="7822368955551467382">"ୱାଇ-ଫାଇ ସ୍ୱଚାଳିତ ଭାବେ ଅନ୍‌ ହୋଇଯାଉ"</string>
+    <string name="wifi_configure_settings_preference_summary_wakeup_on" msgid="7822368955551467382">"ୱାଇ-ଫାଇ ସ୍ୱଚାଳିତ ଭାବେ ପୁଣି ଚାଲୁ ହୋଇଯାଏ"</string>
     <string name="wifi_configure_settings_preference_summary_wakeup_off" msgid="5710203586018223864">"ସ୍ୱଚାଳିତ ଭାବେ ୱାଇ-ଫାଇ ପୁଣି ଚାଲୁ ହେବନାହିଁ"</string>
     <string name="wifi_access_points" msgid="5846755709207101844">"ୱାଇ-ଫାଇ ନେଟ୍‌ୱାର୍କ"</string>
     <string name="wifi_menu_more_options" msgid="1236651929987819716">"ଅଧିକ ବିକଳ୍ପ"</string>
@@ -3857,7 +3861,7 @@
     <string name="promote_conversation_title" msgid="4731148769888238722">"ଏହା ଏକ ବାର୍ତ୍ତାଳାପ ଅଟେ"</string>
     <string name="promote_conversation_summary" msgid="3890724115743515035">"ବାର୍ତ୍ତାଳାପ ବିଭାଗରେ ଯୋଗ କରନ୍ତୁ"</string>
     <string name="manage_conversations" msgid="4440289604887824337">"ବାର୍ତ୍ତାଳାପଗୁଡ଼ିକ ପରିଚାଳନା କରନ୍ତୁ"</string>
-    <string name="priority_conversation_count_zero" msgid="3862289535537564713">"କୌଣସି ପ୍ରାଥମିକତା ଥିବା ବାର୍ତ୍ତାଳାପ ନାହିଁ"</string>
+    <string name="priority_conversation_count_zero" msgid="3862289535537564713">"ପ୍ରାଥମିକତା ଥିବା କୌଣସି ବାର୍ତ୍ତାଳାପ ନାହିଁ"</string>
     <plurals name="priority_conversation_count" formatted="false" msgid="4229447176780862649">
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g>ଟି ପ୍ରାଥମିକତା ଥିବା ବାର୍ତ୍ତାଳାପ</item>
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g>ଟି ପ୍ରାଥମିକତା ଥିବା ବାର୍ତ୍ତାଳାପ</item>
