--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -825,6 +825,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"আপনাকে অন্য ডিভাইসে এই পিন টাইপ করতে হতে পারে।"</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"আপনাকে অন্য ডিভাইসে এই পাস কী টাইপ করতে হতে পারে।"</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"এর সঙ্গে যুক্ত করতে:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;নিশ্চিত করুন যে এটি এই পাস কী দেখাচ্ছে:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"কো-অর্ডিনেটেড সেটের সাথে পেয়ার করার বিষয়টি কনফার্ম করুন"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"এর থেকে:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;এই ডিভাইসের সঙ্গে যুক্ত করবেন?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"এর সঙ্গে যুক্ত করতে:<xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g>এটিতে টাইপ করুন:<xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g>, তারপর Return বা Enter টিপুন।"</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"আপনার পরিচিতি এবং কল ইতিহাস অ্যাক্সেসের অনুমতি দিন"</string>
@@ -858,6 +859,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"কানেক্ট করা যায়নি। আবার চেষ্টা করুন।"</string>
     <string name="device_details_title" msgid="1155622417516195481">"ডিভাইসের বিবরণ"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"ডিভাইসের ব্লুটুথ অ্যাড্রেস: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"ডিভাইসের ব্লুটুথ অ্যাড্রেস:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"ডিভাইসটি কি ভুলে যাবেন?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"ডিসকানেক্ট করুন"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"অ্যাপ ডিসকানেক্ট করতে চান?"</string>
@@ -890,6 +892,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"সেটিংস মনে রাখুন"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"ব্লুটুথের মাধ্যমে কানেক্ট সর্বাধিক অডিও ডিভাইস"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"সর্বাধিক কতগুলি অডিও ডিভাইস ব্লুটুথের মাধ্যমে কানেক্ট করা যাবে তা নির্দিষ্ট করুন"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"NFC স্ট্যাক ডিবাগ লগ"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC-এর স্ট্যাক লগ করার লেভেল বাড়ান"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"কাস্ট করুন"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"মিরর"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"ওয়্যারলেস প্রদর্শন সক্ষম করুন"</string>
@@ -3795,7 +3799,7 @@
     <string name="bubbles_feature_disabled_dialog_text" msgid="5275666953364031055">"এই অ্যাপে \'বাবল\' ফিচার চালু করা হলে, আপনার ডিভাইসের জন্যও এটি চালু হয়ে যাবে।\n\nএর ফলে সেই সব অ্যাপ ও কথোপকথন প্রভাবিত হবে, যেগুলির কাছে \'বাবল\' ফিচার ব্যবহার করার অনুমতি আছে।"</string>
     <string name="bubbles_feature_disabled_button_approve" msgid="2042628067101419871">"চালু করুন"</string>
     <string name="bubbles_feature_disabled_button_cancel" msgid="8963409459448350600">"বাতিল করুন"</string>
-    <string name="notifications_bubble_setting_on_summary" msgid="4641572377430901196">"চালু করুন / কথোপকথন ভাসমান আইকন হিসেবে দেখা যেতে পারে"</string>
+    <string name="notifications_bubble_setting_on_summary" msgid="4641572377430901196">"চালু আছে / কথোপকথন ভাসমান আইকন হিসেবে দেখা যেতে পারে"</string>
     <string name="notifications_bubble_setting_title" msgid="8287649393774855268">"অ্যাপকে বাবল দেখানোর অনুমতি দিন"</string>
     <string name="notifications_bubble_setting_description" msgid="7336770088735025981">"কিছু কথোপকথন অন্যান্য অ্যাপের উপর ভাসমান আইকন হিসেবে দেখা যাবে"</string>
     <string name="bubble_app_setting_all" msgid="312524752846978277">"সব কথোপকথন বাবল হিসেবে দেখুন"</string>
