--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -33,7 +33,7 @@
     <string name="header_category_wireless_networks" msgid="303445626075235229">"Connexions sense fil i xarxes"</string>
     <string name="header_category_system" msgid="1665516346845259058">"Sistema"</string>
     <string name="radioInfo_service_in" msgid="9088637745836646271">"En servei"</string>
-    <string name="radioInfo_service_out" msgid="1868347333892403287">"Sense servei"</string>
+    <string name="radioInfo_service_out" msgid="1868347333892403287">"Fora de servei"</string>
     <string name="radioInfo_service_emergency" msgid="6838935881091760942">"Només trucades d\'emergència"</string>
     <string name="radioInfo_service_off" msgid="6184928420860868571">"Senyal mòbil desactivat"</string>
     <string name="radioInfo_roaming_in" msgid="8892550453644088692">"Itinerància"</string>
@@ -825,6 +825,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"Pot ser que també hagis d\'introduir aquest PIN a l\'altre dispositiu."</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"Pot ser que també hagis d\'introduir aquesta clau d\'accés a l\'altre dispositiu."</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"Per vincular a &lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;assegura\'t que es mostra aquesta clau d\'accés:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"Confirma per vincular amb el conjunt coordinat"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"De:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Vols vincular aquest dispositiu?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"Per vincular a <xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g>escriu-hi <xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g> i, a continuació, prem Retorn."</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"Permet l\'accés als contactes i a l\'historial de trucades"</string>
@@ -858,6 +859,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"No s\'ha pogut connectar. Torna-ho a provar."</string>
     <string name="device_details_title" msgid="1155622417516195481">"Detalls del dispositiu"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Adreça Bluetooth del dispositiu: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Adreça Bluetooth del dispositiu:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Vols que s\'oblidi el dispositiu?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"Suprimeix l\'associació"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"Vols desconnectar l\'aplicació?"</string>
@@ -890,6 +892,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"Recorda la configuració"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Nombre màxim de dispositius d\'àudio Bluetooth connectats"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Selecciona el nombre màxim de dispositius d\'àudio Bluetooth connectats"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"Registre de depuració de la pila de l\'NFC"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Augmenta el nivell de registre de la pila de l\'NFC"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"Emet"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"projectar"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"Activa pantalla sense fil"</string>
@@ -1266,7 +1270,7 @@
     <string name="dtmf_tone_enable_title" msgid="2241337296249130217">"So en marcar el número"</string>
     <string name="sound_effects_enable_title" msgid="328569690466233866">"Toca els sons"</string>
     <string name="lock_sounds_enable_title" msgid="804365014499259673">"So de bloqueig de pantalla"</string>
-    <string name="audio_record_proc_title" msgid="486071779724181619">"Reducció del soroll"</string>
+    <string name="audio_record_proc_title" msgid="486071779724181619">"Cancel·lació de soroll"</string>
     <string name="volume_media_description" msgid="2736061076584067204">"Música, vídeos, jocs i altres fitxers multimèdia"</string>
     <string name="volume_ring_description" msgid="5423168446359881864">"So de trucada i notificacions"</string>
     <string name="volume_notification_description" msgid="3241009629930030492">"Notificacions"</string>
@@ -3959,7 +3963,7 @@
     <string name="picture_in_picture_app_detail_switch" msgid="8544190716075624017">"Permet pantalla en pantalla"</string>
     <string name="picture_in_picture_app_detail_summary" msgid="2503211101305358849">"Permet que aquesta aplicació creï una finestra de pantalla en pantalla mentre l\'aplicació està oberta o després de sortir-ne (per exemple, per seguir veient un vídeo). Aquesta finestra es mostra sobre altres aplicacions que estàs utilitzant."</string>
     <string name="interact_across_profiles_title" msgid="7285906999927669971">"Aplicacions de treball i personals connectades"</string>
-    <string name="interact_across_profiles_summary_allowed" msgid="1365881452153799092">"Connectada"</string>
+    <string name="interact_across_profiles_summary_allowed" msgid="1365881452153799092">"Connectats"</string>
     <string name="interact_across_profiles_summary_not_allowed" msgid="5802674212788171790">"No connectada"</string>
     <string name="interact_across_profiles_empty_text" msgid="419061031064397168">"No hi ha cap aplicació connectada"</string>
     <string name="interact_across_profiles_keywords" msgid="5996472773111665049">"multiperfil aplicacions connectades aplicacions de treball i personals"</string>
@@ -4630,7 +4634,7 @@
     <string name="cellular_data_usage" msgid="5874156338825285334">"Ús de dades mòbils"</string>
     <string name="app_cellular_data_usage" msgid="7603292978956033926">"Ús de dades de les aplicacions"</string>
     <string name="wifi_data_usage" msgid="6868503699134605707">"Ús de dades Wi-Fi"</string>
-    <string name="non_carrier_data_usage" msgid="6494603202578414755">"Ús de dades de xarxes sense operador"</string>
+    <string name="non_carrier_data_usage" msgid="6494603202578414755">"Ús de dades sense xarxa mòbil"</string>
     <string name="ethernet_data_usage" msgid="4552227880905679761">"Ús de dades Ethernet"</string>
     <string name="wifi" msgid="2932584495223243842">"Wi-Fi"</string>
     <string name="ethernet" msgid="4665162609974492983">"Ethernet"</string>
