--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -827,6 +827,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"Võib-olla peate selle PIN-koodi sisestama ka teise seadmesse."</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"Võib-olla peate selle parooli sisestama ka teise seadmesse."</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"Sidumine seadmega&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Veenduge, et see kuvaks järgmist parooli:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"Kinnitage koordineeritud komplektiga sidumiseks"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"Seadmelt: &lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt; Kas siduda seadmega?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"Siduda seadmega:<xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g>Sisestage:<xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g>, seejärel vajutage naasmis- või sisestusklahvi."</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"Luba juurdepääs kontaktidele ja kõneajaloole"</string>
@@ -860,6 +861,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"Ühendust ei õnnestunud luua. Proovige uuesti."</string>
     <string name="device_details_title" msgid="1155622417516195481">"Seadme üksikasjad"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Seadme Bluetoothi aadress: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Seadme Bluetoothi aadress:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Kas unustada seade?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"Eemalda seos"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"Kas katkestada rakenduse ühendus?"</string>
@@ -892,6 +894,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"Jäta seaded meelde"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Maksimaalne arv ühendatud Bluetoothi heliseadmeid"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Maksimaalse arvu ühendatud Bluetoothi heliseadmete valimine"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"NFC virna silumise logi"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC virna logimise taseme suurendamine"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"Ülekandmine"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"peegeldamine"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"Luba juhtmeta ekraaniühendus"</string>
@@ -1889,7 +1893,7 @@
     <string name="about_settings" product="tablet" msgid="2888705054709289693">"Teave tahvelarvuti kohta"</string>
     <string name="about_settings" product="default" msgid="4038626127378127613">"Telefoni teave"</string>
     <string name="about_settings" product="device" msgid="9012888717090302815">"Teave seadme kohta"</string>
-    <string name="about_settings" product="emulator" msgid="2516560858771320366">"Teave jäljendatud seadme kohta"</string>
+    <string name="about_settings" product="emulator" msgid="2516560858771320366">"Teave emuleeritud seadme kohta"</string>
     <string name="about_settings_summary" msgid="4831942939227432513">"Vaadake juriidilist teavet, olekut, tarkvara versiooni"</string>
     <string name="legal_information" msgid="7509900979811934843">"Juriidiline teave"</string>
     <string name="contributors_title" msgid="7965640251547037965">"Kaasautorid"</string>
