--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -825,6 +825,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"Baliteke PIN hau beste gailuan ere idatzi behar izatea."</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"Baliteke pasahitz hau beste gailuan ere idatzi behar izatea."</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"Gailu honekin parekatzeko:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Ziurtatu pasakode hau erakusten duela:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"Berretsi multzo koordinatuarekin parekatzeko"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"Igorlea:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Gailuarekin parekatu?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"Honekin parekatzeko:<xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g>Idatzi hau bertan:<xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g>, eta sakatu Itzuli edo Sartu."</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"Eman kontaktuak eta deien historia erabiltzeko baimena"</string>
@@ -858,6 +859,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"Ezin izan da konektatu. Saiatu berriro."</string>
     <string name="device_details_title" msgid="1155622417516195481">"Gailuaren xehetasunak"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Gailua Bluetooth bidez konektatzeko helbidea: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Gailua Bluetooth bidez konektatzeko helbidea: \n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Gailua ahaztu nahi duzu?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"Kendu erlazioa"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"Aplikazioa deskonektatu nahi duzu?"</string>
@@ -890,6 +892,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"Gogoratu ezarpenak"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Gehienez ere konekta daitezkeen Bluetooth bidezko audio-gailuak"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Hautatu gehienez ere konekta daitezkeen Bluetooth bidezko audio-gailuak"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"NFCaren pilatzea arazteko erregistroa"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Handitu NFCaren pilatzearen erregistro-maila"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"Igorpena"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"islatzea"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"Gaitu hari gabeko bistaratzea"</string>
@@ -1047,7 +1051,7 @@
     <string name="wifi_dpp_scan_qr_code_with_another_device" msgid="6967364080214325016">"\"<xliff:g id="SSID">%1$s</xliff:g>\" sarean sartzeko, eskaneatu QR kode hau beste gailu batekin"</string>
     <string name="wifi_dpp_scan_open_network_qr_code_with_another_device" msgid="5398619697898444311">"Eskaneatu QR kode hau \"<xliff:g id="SSID">%1$s</xliff:g>\" sarera konektatzeko"</string>
     <string name="wifi_dpp_failure_authentication_or_configuration" msgid="847551626830740204">"Saiatu berriro. Arazoak badirau, jarri gailuaren fabrikatzailearekin harremanetan."</string>
-    <string name="wifi_dpp_failure_not_compatible" msgid="4453775826337805825">"Arazoren bat izan da"</string>
+    <string name="wifi_dpp_failure_not_compatible" msgid="4453775826337805825">"Arazo bat izan da"</string>
     <string name="wifi_dpp_failure_timeout" msgid="7902971341771145564">"Ziurtatu gailua entxufatuta, kargatuta eta piztuta dagoela"</string>
     <string name="wifi_dpp_failure_generic" msgid="6559442892600448442">"Ziurtatu gailua entxufatuta, kargatuta eta piztuta dagoela. Arazoak badirau, jarri gailuaren fabrikatzailearekin harremanetan."</string>
     <string name="wifi_dpp_failure_not_supported" msgid="2908961523550486480">"Ezin da gehitu \"<xliff:g id="SSID">%1$s</xliff:g>\" gailu honetan"</string>
@@ -1550,7 +1554,7 @@
     <string name="memory_music_usage" msgid="8100634000114206429">"Audioa (musika, tonuak, podcastak eta abar)"</string>
     <string name="memory_media_misc_usage" msgid="7066851245178533269">"Beste fitxategi batzuk"</string>
     <string name="memory_media_cache_usage" msgid="780808666853685824">"Cachean gordetako datuak"</string>
-    <string name="sd_eject" product="nosdcard" msgid="6136102589751843304">"Desmuntatu partekatutako memoria"</string>
+    <string name="sd_eject" product="nosdcard" msgid="6136102589751843304">"Desmuntatu biltegi partekatua"</string>
     <string name="sd_eject" product="default" msgid="8062832622096296251">"Desmuntatu SD txartela"</string>
     <string name="sd_eject_summary" product="nosdcard" msgid="6859940774161708871">"Desmuntatu barneko USB memoria"</string>
     <string name="sd_eject_summary" product="default" msgid="5151243312587186226">"Desmuntatu SD txartela, kentzeko prest egon dadin"</string>
@@ -2898,7 +2902,7 @@
     <string name="process_stats_type_cached" msgid="129788969589599563">"Cachean gordeta"</string>
     <string name="process_stats_os_label" msgid="2096501347732184886">"Android sistema eragilea"</string>
     <string name="process_stats_os_native" msgid="794547105037548539">"Natiboa"</string>
-    <string name="process_stats_os_kernel" msgid="5626269994512354996">"Kernela"</string>
+    <string name="process_stats_os_kernel" msgid="5626269994512354996">"Kernel-a"</string>
     <string name="process_stats_os_zram" msgid="3067278664868354143">"Z-Ram"</string>
     <string name="process_stats_os_cache" msgid="4753163023524305711">"Cacheak"</string>
     <string name="process_stats_ram_use" msgid="5966645638783509937">"RAM erabilera"</string>
@@ -5267,7 +5271,7 @@
     <string name="privileged_action_disable_sub_dialog_title_without_carrier" msgid="6518373229436331608">"SIM txartela desaktibatu nahi duzu?"</string>
     <string name="privileged_action_disable_sub_dialog_progress" msgid="5900243067681478102">"SIM txartela desaktibatzen<xliff:g id="ELLIPSIS">…</xliff:g>"</string>
     <string name="privileged_action_disable_fail_title" msgid="6689494935697043555">"Ezin da desgaitu operadorea"</string>
-    <string name="privileged_action_disable_fail_text" msgid="8404023523406091819">"Arazoren bat izan da, eta ezin izan da desgaitu operadorea."</string>
+    <string name="privileged_action_disable_fail_text" msgid="8404023523406091819">"Arazo bat izan da, eta ezin izan da desgaitu operadorea."</string>
     <string name="sim_action_enable_dsds_title" msgid="226508711751577169">"Bi SIM erabili nahi dituzu?"</string>
     <string name="sim_action_enable_dsds_text" msgid="970986559326263949">"Gailu honek bi SIM izan ditzake aktibo aldi berean. SIM bakarra erabili nahi baduzu, sakatu \"Ez\"."</string>
     <string name="sim_action_restart_title" msgid="7054617569121993825">"Gailua berrabiarazi nahi duzu?"</string>
@@ -5309,7 +5313,7 @@
     <string name="network_connection_request_dialog_summary" msgid="7693038309792726170">"<xliff:g id="APPNAME">%1$s</xliff:g> aplikazioak aldi baterako wifi-sare bat erabili nahi du zure gailura konektatzeko"</string>
     <string name="network_connection_timeout_dialog_message" msgid="598509083077743772">"Ez da aurkitu gailurik. Ziurtatu gailuak piztuta daudela eta konekta daitezkeela."</string>
     <string name="network_connection_timeout_dialog_ok" msgid="6022675321823723755">"Saiatu berriro"</string>
-    <string name="network_connection_errorstate_dialog_message" msgid="3360714322047603239">"Arazoren bat izan da. Aplikazioak bertan behera utzi du gailu bat aukeratzeko eskaera."</string>
+    <string name="network_connection_errorstate_dialog_message" msgid="3360714322047603239">"Arazo bat izan da. Aplikazioak bertan behera utzi du gailu bat aukeratzeko eskaera."</string>
     <string name="network_connection_connect_successful" msgid="2587314077675642476">"Konektatu da"</string>
     <string name="network_connection_connect_failure" msgid="6803313816657494319">"Ezin izan da konektatu"</string>
     <string name="network_connection_request_dialog_showall" msgid="6392059758456994944">"Erakutsi guztiak"</string>
@@ -5423,7 +5427,7 @@
     <string name="no_5g_in_dsds_text" product="default" msgid="772747677303920132">"Bi SIM txartel darabiltzanean, telefonoak 4G sarea erabili ahal izango du, gehienez. "<annotation id="url">"Lortu informazio gehiago"</annotation></string>
     <string name="no_5g_in_dsds_text" product="tablet" msgid="4757328474425714624">"Bi SIM txartel darabiltzanean, tabletak 4G sarea erabili ahal izango du, gehienez. "<annotation id="url">"Lortu informazio gehiago"</annotation></string>
     <string name="no_5g_in_dsds_text" product="device" msgid="6983783505032683314">"Bi SIM txartel darabiltzanean, gailuak 4G sarea erabili ahal izango du, gehienez. "<annotation id="url">"Lortu informazio gehiago"</annotation></string>
-    <string name="cached_apps_freezer" msgid="1057519579761550350">"Eten cacheko aplikazioen exekuzioa"</string>
+    <string name="cached_apps_freezer" msgid="1057519579761550350">"Utzi cacheko aplikazioak exekutatzeari"</string>
     <string name="overlay_settings_title" msgid="1032863083496396365">"Eman pantailetan gainjartzeko baimena ezarpenetan"</string>
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Eman ezarpenen pantailetan gainjartzeko baimena aplikazioen gainean bistara daitezkeen aplikazioei"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Multimedia-edukia"</string>
