--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -825,6 +825,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"Anda mungkin juga perlu mengetikkan PIN ini ke perangkat lain."</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"Anda mungkin juga perlu mengetikkan sandi ini ke perangkat lain."</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"Untuk menyandingkan dengan:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Pastikan bahwa perangkat tersebut menampilkan kode sandi:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"Konfirmasikan agar dapat tersambung dengan kumpulan perangkat terkoordinasi"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"Dari:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Sandingkan dengan perangkat ini?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"Untuk menyandingkan dengan:<xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g>Ketikkan:<xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g>, kemudian tekan Kembali atau Enter."</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"Izinkan akses ke kontak dan histori panggilan Anda"</string>
@@ -858,6 +859,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"Tidak dapat terhubung. Coba lagi."</string>
     <string name="device_details_title" msgid="1155622417516195481">"Detail perangkat"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Alamat Bluetooth perangkat: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Alamat Bluetooth perangkat:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Lupakan perangkat?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"Hapus atribusi"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"Putuskan Koneksi Aplikasi?"</string>
@@ -890,6 +892,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"Ingat setelan"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Perangkat audio Bluetooth maksimum yang terhubung"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Pilih jumlah maksimum perangkat audio Bluetooth yang terhubung"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"Log debug stack NFC"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Tingkatkan level logging stack NFC"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"Transmisi"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"cermin"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"Aktifkan layar nirkabel"</string>
@@ -2131,7 +2135,7 @@
     <string name="no_default_apps" msgid="8966319676910104570">"Tak ada Aplikasi default."</string>
     <string name="storageuse_settings_title" msgid="3125650750657988194">"Penggunaan penyimpanan"</string>
     <string name="storageuse_settings_summary" msgid="5001621552305431831">"Lihat penyimpanan yang digunakan apl"</string>
-    <string name="service_restarting" msgid="5104563288155809226">"Memulai kembali"</string>
+    <string name="service_restarting" msgid="5104563288155809226">"Memulai ulang"</string>
     <string name="cached" msgid="5379485147573438201">"Proses latar belakang dalam cache"</string>
     <string name="no_running_services" msgid="9079738069349859373">"Tidak ada yang berjalan."</string>
     <string name="service_started_by_app" msgid="6845028506417670179">"Dimulai oleh apl."</string>
@@ -2667,8 +2671,8 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"Beberapa fitur mungkin dibatasi"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Penggunaan baterai tinggi"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Lihat aplikasi dengan penggunaan tertinggi"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Pengisian daya dibatasi untuk sementara"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Untuk menghemat daya baterai. Pelajari lebih lanjut."</string>
+    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Pengisian daya dibatasi sementara"</string>
+    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Untuk menjaga baterai. Pelajari lebih lanjut."</string>
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Lanjutkan pengisian daya"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"Dalam kondisi tertentu, seperti suhu yang tinggi dan periode pengisian daya yang lama, pengisian daya dapat dibatasi hingga <xliff:g id="PERCENT">%1$s</xliff:g> untuk membantu menjaga kesehatan baterai.\n\nSaat kondisi tersebut berakhir, ponsel akan otomatis mengisi daya secara normal."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"Dalam kondisi tertentu, seperti suhu yang tinggi dan periode pengisian daya yang lama, pengisian daya dapat dibatasi hingga <xliff:g id="PERCENT">%1$s</xliff:g> untuk membantu menjaga kesehatan baterai.\n\nSaat kondisi tersebut berakhir, tablet akan otomatis mengisi daya secara normal."</string>
@@ -3102,7 +3106,7 @@
     <string name="misc_files_selected_count" msgid="5597802791672749532">"Terpilih <xliff:g id="NUMBER">%1$d</xliff:g> dari <xliff:g id="TOTAL">%2$d</xliff:g>"</string>
     <string name="misc_files_selected_count_bytes" msgid="7622766714974500289">"<xliff:g id="NUMBER">%1$s</xliff:g> dari <xliff:g id="TOTAL">%2$s</xliff:g>"</string>
     <string name="select_all" msgid="7898929601615536401">"Pilih semua"</string>
-    <string name="data_usage_summary_title" msgid="394067070764360142">"Penggunaan kuota"</string>
+    <string name="data_usage_summary_title" msgid="394067070764360142">"Penggunaan data"</string>
     <string name="data_usage_app_summary_title" msgid="4933742247928064178">"Data seluler &amp; Wi‑Fi"</string>
     <string name="data_usage_accounting" msgid="6832015632699116754">"Penghitungan data operator mungkin berbeda dengan perangkat Anda."</string>
     <string name="data_usage_app" msgid="6367974637783240699">"Penggunaan aplikasi"</string>
@@ -4460,7 +4464,7 @@
     <string name="no_memory_use_summary" msgid="6708111974923274436">"Tidak ada memori yang digunakan dalam 3 jam terakhir"</string>
     <string name="sort_avg_use" msgid="4416841047669186903">"Urutkan menurut rata-rata penggunaan"</string>
     <string name="sort_max_use" msgid="3370552820889448484">"Urutkan menurut penggunaan maksimum"</string>
-    <string name="memory_performance" msgid="5448274293336927570">"Kinerja"</string>
+    <string name="memory_performance" msgid="5448274293336927570">"Performa"</string>
     <string name="total_memory" msgid="5244174393008910567">"Total memori"</string>
     <string name="average_used" msgid="690235917394070169">"Rata-rata digunakan (%)"</string>
     <string name="free_memory" msgid="439783742246854785">"Bebas"</string>
