--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -825,6 +825,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"ನಿಮಗೆ ಇತರ ಸಾಧನದಲ್ಲಿ ಈ ಪಿನ್‌ ಟೈಪ್‌ ಮಾಡುವ ಅಗತ್ಯವಿರಬಹುದು."</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"ನಿಮಗೆ ಇತರ ಸಾಧನದಲ್ಲಿ ಈ ಪಾಸ್‌ಕೀಯನ್ನು ಟೈಪ್‌ ಮಾಡುವ ಅಗತ್ಯವಿದೆ."</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"ಇದರೊಂದಿಗೆ ಜೋಡಿಸಲು:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;ಇದು ಈ ಪಾಸ್‌ಕೀ ಅನ್ನು ತೋರಿಸುತ್ತಿದೆಯೇ ಎಂಬುದನ್ನು ಖಾತ್ರಿಪಡಿಸಿಕೊಳ್ಳಿ:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"ಸಂಯೋಜಿತ ಪ್ಯಾಕೇಜ್‌ನಲ್ಲಿರುವ ಎಲ್ಲಾ ಸಾಧನಗಳಿಗೆ ಜೋಡಿಸುವುದನ್ನು ಮರೆಯದಿರಿ"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"ಇದರಿಂದ:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;ಈ ಸಾಧನದೊಂದಿಗೆ ಜೋಡಿಸುವುದೇ?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"ಇದರೊಂದಿಗೆ ಜೋಡಿಸಲು:<xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g>ಇದರಲ್ಲಿ ಟೈಪ್‌ ಮಾಡಿ:<xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g>, ನಂತರ ಹಿಂತಿರುಗು ಅಥವಾ ನಮೂದಿಸು ಒತ್ತಿರಿ."</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"ನಿಮ್ಮ ಸಂಪರ್ಕಗಳು ಮತ್ತು ಕರೆ ಇತಿಹಾಸಕ್ಕೆ ಪ್ರವೇಶವನ್ನು ಅನುಮತಿಸಿ"</string>
@@ -858,6 +859,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"ಸಂಪರ್ಕಿಸಲು ಸಾಧ್ಯವಾಗಲಿಲ್ಲ. ಪುನಃ ಪ್ರಯತ್ನಿಸಿ."</string>
     <string name="device_details_title" msgid="1155622417516195481">"ಸಾಧನದ ವಿವರಗಳು"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"ಸಾಧನದ ಬ್ಲೂಟೂತ್ ವಿಳಾಸ: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"ಸಾಧನದ ಬ್ಲೂಟೂತ್ ವಿಳಾಸ:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"ಸಾಧನವನ್ನು ಮರೆತಿದ್ದೀರಾ?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"ಅಸೋಸಿಯೇಷನ್ ಅನ್ನು ತೆಗೆದುಹಾಕಿ"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"ಆ್ಯಪ್ ಅನ್ನು ಡಿಸ್‌ಕನೆಕ್ಟ್ ಮಾಡುವುದೇ?"</string>
@@ -890,6 +892,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"ಸೆಟ್ಟಿಂಗ್‌ಗಳನ್ನು ನೆನಪಿನಲ್ಲಿಡು"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"ಗರಿಷ್ಠ ಸಂಪರ್ಕಿತ ಬ್ಲೂಟೂತ್ ಆಡಿಯೋ ಸಾಧನಗಳು"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"ಸಂಪರ್ಕಿತ ಬ್ಲೂಟೂತ್ ಆಡಿಯೋ ಸಾಧನಗಳ ಗರಿಷ್ಠ ಸಂಖ್ಯೆಯನ್ನು ಆಯ್ಕೆಮಾಡಿ"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"NFC ಸ್ಟ್ಯಾಕ್ ಡೀಬಗ್‌ಲಾಗ್"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC ಸ್ಟ್ಯಾಕ್ ಲಾಗಿಂಗ್ ಹಂತವನ್ನು ಹೆಚ್ಚಿಸಿ"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"ಬಿತ್ತರಿಸುವಿಕೆ"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"ಕನ್ನಡಿ"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"ವೈರ್‌ಲೆಸ್ ಪ್ರದರ್ಶನ ಸಕ್ರಿಯಗೊಳಿಸಿ"</string>
@@ -2667,7 +2671,7 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"ಕೆಲವು ವೈಶಿಷ್ಟ್ಯಗಳು ಸೀಮಿತವಾಗಿರಬಹುದು"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"ಹೆಚ್ಚಿನ ಬ್ಯಾಟರಿ ಬಳಕೆ"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"ಅತ್ಯಂತ ಹೆಚ್ಚು ಬಳಸಲಾದ ಆ್ಯಪ್‌ಗಳನ್ನು ನೋಡಿ"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"ಚಾರ್ಜಿಂಗ್ ತಾತ್ಕಾಲಿಕವಾಗಿ ಸೀಮಿತವಾಗಿದೆ"</string>
+    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"ಚಾರ್ಜಿಂಗ್ ಅನ್ನು ತಾತ್ಕಾಲಿಕವಾಗಿ ಸೀಮಿತಗೊಳಿಸಲಾಗಿದೆ"</string>
     <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"ನಿಮ್ಮ ಬ್ಯಾಟರಿಯನ್ನು ಉಳಿಸಲು. ಇನ್ನಷ್ಟು ತಿಳಿಯಿರಿ."</string>
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"ಚಾರ್ಜಿಂಗ್ ಪುನರಾರಂಭಿಸಿ"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"ಹೆಚ್ಚಿನ ತಾಪಮಾನ ಮತ್ತು ದೀರ್ಘ ಚಾರ್ಜಿಂಗ್ ಅವಧಿಯಂತಹ ಕೆಲವು ಪರಿಸ್ಥಿತಿಗಳಲ್ಲಿ ಬ್ಯಾಟರಿಯ ಆರೋಗ್ಯವನ್ನು ರಕ್ಷಿಸಲು ಚಾರ್ಜಿಂಗ್ <xliff:g id="PERCENT">%1$s</xliff:g> ಗೆ ಸೀಮಿತವಾಗಿದೆ.\n\nಆ ಪರಿಸ್ಥಿತಿಗಳು ಮುಗಿದ ನಂತರ, ನಿಮ್ಮ ಫೋನ್ ಸಾಮಾನ್ಯವಾಗಿ ಸ್ವಯಂಚಾಲಿತವಾಗಿ ಚಾರ್ಜ್ ಆಗುತ್ತದೆ."</string>
@@ -4971,7 +4975,7 @@
       <item quantity="one">ಕ್ಯಾಮರಾ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು</item>
       <item quantity="other">ಕ್ಯಾಮರಾ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು</item>
     </plurals>
-    <string name="default_calendar_app_title" msgid="1870095225089706093">"ಕ್ಯಾಲೆಂಡರ್ ಅಪ್ಲಿಕೇಶನ್"</string>
+    <string name="default_calendar_app_title" msgid="1870095225089706093">"Calendar ಅಪ್ಲಿಕೇಶನ್"</string>
     <string name="default_contacts_app_title" msgid="7740028900741944569">"ಸಂಪರ್ಕಗಳ ಅಪ್ಲಿಕೇಶನ್"</string>
     <plurals name="default_email_app_title" formatted="false" msgid="8338194872609410234">
       <item quantity="one">ಇಮೇಲ್ ಕ್ಲೈಂಟ್ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು</item>
