--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -303,7 +303,7 @@
       <item quantity="one">사용 - <xliff:g id="COUNT_0">%1$d</xliff:g>개의 앱이 위치에 액세스할 수 있음</item>
     </plurals>
     <string name="location_settings_loading_app_permission_stats" msgid="6054103701535557342">"로드 중…"</string>
-    <string name="location_settings_footer_general" msgid="1040507068701188821">"근처 기기 권한이 있는 앱이 연결된 기기의 상대적인 위치를 파악할 수 있습니다."</string>
+    <string name="location_settings_footer_general" msgid="1040507068701188821">"근처 기기 액세스 권한이 있는 앱은 연결된 기기의 상대적인 위치를 파악할 수 있습니다."</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"앱 및 서비스에 대한 위치 정보 액세스가 사용 중지되어 있습니다. 그래도 긴급 전화번호로 전화를 걸거나 문자 메시지를 보내면 기기의 위치 정보가 구조 서비스에 전달될 수 있습니다."</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="5329024810729665156">"위치 설정 자세히 알아보기"</string>
     <string name="account_settings_title" msgid="9138880127246241885">"계정"</string>
@@ -827,6 +827,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"또한 다른 기기에 이 PIN을 입력해야 할 수도 있습니다."</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"또한 경우에 따라 다른 기기에 이 패스키를 입력해야 합니다."</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;와(과) 페어링하려면&lt;br&gt;&lt;br&gt;이 패스키(&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;)가 표시되는지 확인하세요.&lt;br&gt;&lt;br&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"통합 세트와의 페어링 확인"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"출처:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;이 기기와 페어링하시겠습니까?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"<xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g>와(과) 페어링하려면 <xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g>을(를) 입력한 다음 Return 또는 Enter 키를 누르세요."</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"연락처 및 통화 기록 액세스 허용"</string>
@@ -860,6 +861,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"연결할 수 없습니다. 다시 시도해 주세요."</string>
     <string name="device_details_title" msgid="1155622417516195481">"기기 세부정보"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"기기 블루투스 주소: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"기기 블루투스 주소: \n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"기기를 지우시겠습니까?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"연결 삭제"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"앱 연결을 해제할까요?"</string>
@@ -892,6 +894,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"설정 기억"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"연결된 블루투스 오디오 기기의 최대 개수"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"연결된 블루투스 오디오 기기의 최대 개수 선택"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"NFC 스택 디버그 로그"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC 스택 로깅 수준 높이기"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"전송"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"미러링"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"무선 디스플레이 사용"</string>
@@ -1594,7 +1598,7 @@
     <string name="storage_menu_manage" msgid="7465522758801346408">"저장용량 관리"</string>
     <string name="keywords_storage_menu_free" msgid="2275406357317597106">"삭제, 저장용량"</string>
     <string name="storage_free_up_space_title" msgid="281047807372131975">"여유 공간 확보"</string>
-    <string name="storage_free_up_space_summary" msgid="6650027929735481350">"Files 앱으로 이동하여 저장공간을 관리하고 여유 공간을 확보합니다."</string>
+    <string name="storage_free_up_space_summary" msgid="6650027929735481350">"저장공간을 관리하고 여유 공간을 확보하려면 Files 앱으로 이동하세요."</string>
     <string name="storage_title_usb" msgid="1332488715547400452">"USB 컴퓨터 연결"</string>
     <string name="usb_connection_category" msgid="2288543238378907242">"다음으로 연결"</string>
     <string name="usb_mtp_title" msgid="9068009584556422314">"미디어 기기(MTP)"</string>
@@ -2054,7 +2058,7 @@
     <string name="data_size_label" msgid="7814478940141255234">"사용자 데이터"</string>
     <string name="external_data_size_label" product="nosdcard" msgid="1054860423004751290">"USB 저장소 데이터"</string>
     <string name="external_data_size_label" product="default" msgid="3370825186202856353">"SD 카드"</string>
-    <string name="uninstall_text" msgid="315764653029060126">"설치 제거"</string>
+    <string name="uninstall_text" msgid="315764653029060126">"제거"</string>
     <string name="uninstall_all_users_text" msgid="5924715251087176474">"모든 사용자에 대해 제거"</string>
     <string name="install_text" msgid="4558333621516996473">"설치"</string>
     <string name="disable_text" msgid="5146002260857428005">"사용 안함"</string>
@@ -2670,9 +2674,9 @@
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"배터리 사용량이 증가함"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"배터리 사용량이 가장 높은 앱을 확인하세요"</string>
     <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"충전이 일시적으로 제한됨"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"배터리 수명을 연장하는 방법입니다. 자세히 알아보세요."</string>
+    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"배터리 보호를 위한 조치입니다. 자세히 알아보세요."</string>
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"충전 재개"</string>
-    <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"온도가 높거나 충전 시간이 긴 경우 등 특정한 상황에서는 배터리 보호를 위해 <xliff:g id="PERCENT">%1$s</xliff:g>까지만 충전될 수 있습니다.\n\n상태가 완화되면 휴대전화가 다시 자동으로 정상 충전됩니다."</string>
+    <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"온도가 높거나 충전 시간이 긴 경우 등 특정한 상황에서는 배터리 보호를 위해 <xliff:g id="PERCENT">%1$s</xliff:g>까지만 충전될 수 있습니다.\n\n상태가 개선되면 휴대전화가 다시 자동으로 정상 충전됩니다."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"온도가 높거나 충전 시간이 긴 경우 등 특정한 상황에서는 배터리 보호를 위해 <xliff:g id="PERCENT">%1$s</xliff:g>까지만 충전될 수 있습니다.\n\n상태가 완화되면 태블릿이 다시 자동으로 정상 충전됩니다."</string>
     <string name="battery_tip_dialog_message" product="default" msgid="4592387206991500075">"휴대전화를 평소보다 더 많이 사용했기 때문에 배터리가 평소보다 더 빨리 소진될 수 있습니다.\n\n배터리 사용량이 가장 많은 앱:"</string>
     <string name="battery_tip_dialog_message" product="tablet" msgid="111303605119856034">"태블릿을 평소보다 더 많이 사용했기 때문에 배터리가 평소보다 더 빨리 소진될 수 있습니다.\n\n배터리 사용량이 가장 많은 앱:"</string>
@@ -3396,7 +3400,7 @@
     <string name="call_manager_title" msgid="3397433159509629466">"통화 관리자"</string>
     <!-- no translation found for call_manager_summary (2558839230880919191) -->
     <skip />
-    <string name="cell_broadcast_settings" msgid="2416980110093867199">"재난문자"</string>
+    <string name="cell_broadcast_settings" msgid="2416980110093867199">"긴급 재난 문자"</string>
     <string name="network_operators_settings" msgid="5105453353329748954">"네트워크 이동통신사"</string>
     <string name="access_point_names" msgid="5768430498022188057">"액세스 포인트 이름(APN)"</string>
     <string name="enhanced_4g_lte_mode_title" msgid="6624700245232361149">"VoLTE"</string>
@@ -3781,7 +3785,7 @@
     <string name="history_toggled_on_summary" msgid="9034278971358282728">"최근 알림 및 일시 중지된 알림이 여기에 표시됩니다."</string>
     <string name="notification_history_view_settings" msgid="5269317798670449002">"알림 설정 보기"</string>
     <string name="notification_history_open_notification" msgid="2655071846911258371">"알림 열기"</string>
-    <string name="snooze_options_title" msgid="2109795569568344617">"알림 일시 중지 허용"</string>
+    <string name="snooze_options_title" msgid="2109795569568344617">"다시 알림 허용"</string>
     <string name="hide_silent_icons_title" msgid="5951392023601167577">"조용한 알림 아이콘 숨기기"</string>
     <string name="hide_silent_icons_summary" msgid="623763437631637232">"조용한 알림 아이콘이 상태 표시줄에 표시되지 않습니다."</string>
     <string name="notification_badging_title" msgid="5469616894819568917">"앱 아이콘에 알림 표시 점 사용"</string>
@@ -4826,7 +4830,7 @@
     <string name="edge_to_edge_navigation_title" msgid="714427081306043819">"동작 탐색"</string>
     <string name="edge_to_edge_navigation_summary" msgid="8497033810637690561">"홈으로 이동하려면 화면 하단에서 위로 스와이프합니다. 앱을 전환하려면 아래에서 위로 스와이프하고 잠시 기다린 다음 손가락을 뗍니다. 뒤로 돌아가려면 왼쪽 또는 오른쪽 가장자리에서 스와이프합니다."</string>
     <string name="legacy_navigation_title" msgid="7877402855994423727">"3버튼 탐색"</string>
-    <string name="legacy_navigation_summary" msgid="5905301067778326433">"화면 하단의 버튼을 사용하여 뒤로 돌아가고 홈으로 이동하거나 앱을 전환합니다."</string>
+    <string name="legacy_navigation_summary" msgid="5905301067778326433">"화면 하단의 버튼을 사용하여 뒤로 돌아가거나 홈으로 이동하거나 앱을 전환합니다."</string>
     <string name="keywords_system_navigation" msgid="3131782378486554934">"시스템 탐색, 2버튼 탐색, 3버튼 탐색, 동작 탐색, 스와이프"</string>
     <string name="gesture_not_supported_dialog_message" msgid="5316512246119347889">"기본 홈 앱(<xliff:g id="DEFAULT_HOME_APP">%s</xliff:g>)에서 지원하지 않는 기능입니다."</string>
     <string name="gesture_not_supported_positive_button" msgid="7909969459977021893">"기본 홈 앱 전환"</string>
@@ -5434,7 +5438,7 @@
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"미디어 추천 표시"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"활동을 바탕으로 추천을 받습니다."</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"플레이어를 숨깁니다."</string>
-    <string name="media_controls_show_player" msgid="8504571042365814021">"플레이어를 표시합니다."</string>
+    <string name="media_controls_show_player" msgid="8504571042365814021">"플레이어 표시"</string>
     <string name="keywords_media_controls" msgid="8345490568291778638">"미디어"</string>
     <string name="connected_device_see_all_summary" msgid="2056010318537268108">"블루투스를 사용 설정함"</string>
     <string name="bluetooth_setting_on" msgid="4808458394436224124">"사용"</string>
@@ -5541,7 +5545,7 @@
     <string name="enable_2g_title" msgid="8184757884636162942">"2G 허용"</string>
     <string name="enable_2g_summary" msgid="906487478332145407">"2G 모바일 데이터 연결을 사용하세요. 긴급 전화의 경우 2G가 항상 사용 설정됩니다."</string>
     <string name="show_clip_access_notification" msgid="7782300987639778542">"클립보드 액세스 표시"</string>
-    <string name="show_clip_access_notification_summary" msgid="474090757777203207">"앱이 복사된 텍스트, 이미지 또는 기타 콘텐츠에 액세스할 때 메시지를 표시합니다."</string>
+    <string name="show_clip_access_notification_summary" msgid="474090757777203207">"앱이 복사된 텍스트, 이미지 또는 기타 콘텐츠에 액세스할 때 메시지 표시"</string>
     <string name="all_apps" msgid="3054120149509114789">"모든 앱"</string>
     <string name="request_manage_bluetooth_permission_dont_allow" msgid="8798061333407581300">"허용 안함"</string>
     <string name="uwb_settings_title" msgid="8578498712312002231">"초광대역(UWB)"</string>
