--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -825,6 +825,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"Та мөн энэ ПИН-г нөгөө төхөөрөмжүүд дээр оруулах хэрэгтэй болж магадгүй."</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"Та мөн энэ түлхүүрийг нөгөө төхөөрөмж дээр оруулах хэрэгтэй болж магадгүй."</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"Дараахтай хослуулах:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Дараах түлхүүрийг харуулж байгаа эсэхийг анхаарна уу:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"Зохицсон багцтай хослуулахыг баталгаажуулна уу"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"Юунаас:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Энэ төхөөрөмжтэй хослуулах уу?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"<xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g>-тай хослуулахын тулд дээр нь <xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g>-г оруулаанд Буцах буюу Оруулах товчийг дарна уу."</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"Харилцагч болон дуудлагын түүхийн хандалтыг зөвшөөрөх"</string>
@@ -858,6 +859,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"Холбогдож чадсангүй. Дахин оролдоно уу."</string>
     <string name="device_details_title" msgid="1155622417516195481">"Төхөөрөмжийн дэлгэрэнгүй"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Төхөөрөмжийн Bluetooth хаяг: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Төхөөрөмжийн Bluetooth хаяг:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Төхөөрөмжийг мартах уу?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"Холбогдох байдлыг хасах"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"Аппыг салгах уу?"</string>
@@ -890,6 +892,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"Тохиргоог сануулах"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Холбогдсон Bluetooth аудио төхөөрөмжийн дээд тоо"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Холбогдсон Bluetooth аудио төхөөрөмжийн дээд тоог сонгох"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"NFC стекийн дебаг хийх лог"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC стекийн логийн түвшнийг нэмэгдүүлэх"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"Дамжуулах"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"тусгал"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"Утасгүй дэлгэцийг идэвхжүүлэх"</string>
