--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -825,6 +825,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"Det er mulig at du må skrive inn denne PIN-koden også på den andre enheten."</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"Det er mulig at du må oppgi dette passordet også på den andre enheten."</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"Sånn kobler du til:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Kontroller at dette passordet vises:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"Bekreft for å koble til det koordinerte settet"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"Fra:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Vil du koble til denne enheten?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"Sånn kobler du til: <xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g> Skriv inn følgende: <xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g>, og trykk deretter på Retur eller Enter."</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"Gi tilgang til kontaktene dine og anropsloggen din"</string>
@@ -858,6 +859,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"Kunne ikke koble til. Prøv på nytt."</string>
     <string name="device_details_title" msgid="1155622417516195481">"Enhetsdetaljer"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Enhetens Bluetooth-adresse: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Enhetens Bluetooth-adresse:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Vil du glemme enheten?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"Fjern tilknytning"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"Vil du koble fra appen?"</string>
@@ -890,6 +892,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"Husk innstillinger"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Maksimalt antall Bluetooth-lydenheter"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Velg maksimalt antall tilkoblede Bluetooth-lydenheter"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"Feilsøkingslogg for NFC-stabel"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Øk loggføringsnivå for NFC-stabel"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"Cast"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"speil"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"Slå på trådløs skjermdeling"</string>
@@ -2272,7 +2276,7 @@
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"Skjerm, interaksjon, lyd"</string>
     <string name="vision_settings_title" msgid="8919983801864103069">"Synsinnstillinger"</string>
     <string name="vision_settings_description" msgid="7614894785054441991">"Du kan tilpasse denne enheten etter egne behov. Tilgjengelighetsfunksjonene kan du endre senere i Innstillinger."</string>
-    <string name="vision_settings_suggestion_title" msgid="4689275412658803919">"Endre skriftstørrelse"</string>
+    <string name="vision_settings_suggestion_title" msgid="4689275412658803919">"Endre skrift­­størrelse"</string>
     <string name="screen_reader_category_title" msgid="5825700839731107803">"Skjermleser"</string>
     <string name="captions_category_title" msgid="574490148949400274">"Teksting"</string>
     <string name="audio_category_title" msgid="5283853679967605826">"Lyd"</string>
@@ -2670,8 +2674,8 @@
     <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Lading er midlertidig begrenset"</string>
     <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"For å forlenge batterilevetiden. Finn ut mer."</string>
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Gjenoppta ladingen"</string>
-    <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"Under visse omstendigheter, for eksempel høye temperaturer og lange ladetider, kan lading begrenses til <xliff:g id="PERCENT">%1$s</xliff:g> for å bevare batteritilstanden.\n\nNår disse omstendighetene avsluttes, lader telefonen automatisk som normalt."</string>
-    <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"Under visse omstendigheter, for eksempel høye temperaturer og lange ladetider, kan lading begrenses til <xliff:g id="PERCENT">%1$s</xliff:g> for å bevare batteritilstanden.\n\nNår disse omstendighetene avsluttes, lader nettbrettet automatisk som normalt."</string>
+    <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"Under visse omstendigheter, for eksempel høye temperaturer og lange ladetider, kan ladingen begrenses til <xliff:g id="PERCENT">%1$s</xliff:g> for å bevare batteriet.\n\nNår slike omstendigheter er over, gjenopptar telefonen automatisk normal lading."</string>
+    <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"Under visse omstendigheter, for eksempel høye temperaturer og lange ladetider, kan ladingen begrenses til <xliff:g id="PERCENT">%1$s</xliff:g> for å bevare batteriet.\n\nNår slike omstendigheter er over, gjenopptar telefonen automatisk normal lading."</string>
     <string name="battery_tip_dialog_message" product="default" msgid="4592387206991500075">"Siden du har brukt telefonen mer enn vanlig, kan batteriet gå tomt raskere enn normalt.\n\nApper med høyest batteribruk:"</string>
     <string name="battery_tip_dialog_message" product="tablet" msgid="111303605119856034">"Siden du har brukt nettbrettet mer enn vanlig, kan batteriet gå tomt raskere enn normalt.\n\nApper med høyest batteribruk:"</string>
     <string name="battery_tip_dialog_message" product="device" msgid="3896805213768863874">"Siden du har brukt enheten mer enn vanlig, kan batteriet gå tomt raskere enn normalt.\n\nApper med høyest batteribruk:"</string>
