--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -825,6 +825,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"तपाईँले अर्को उपकरणमा पनि PIN टाइप गर्न पर्ने हुन सक्छ।"</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"तपाईँले सायद यो पासकि अन्य उपकरणमा पनि टाइप गर्नुपर्छ।"</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> को साथ जोडी पार्न निश्चित गर्नुहोस् यसले यो पास कुञ्जी देखाइरहेको छ <xliff:g id="PASSKEY">%2$s</xliff:g>"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"समायोजित सेटमा कनेक्ट गर्न पुष्टि गर्नुहोस्"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"बाट: &lt;br&gt; &lt;b&gt; <xliff:g id="DEVICE_NAME">%1$s</xliff:g> &lt;/ b&gt; यस उपकरणका साथ जोडा बाँध्ने हो?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"<xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g>सँग जोडी गर्न यसमा टाइप गर्नुहोस्: <xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g> <xliff:g id="PASSKEY">%2$s</xliff:g> <xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g> अनि रिटर्न वा इन्टर थिच्नुहोस्।"</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"आफ्ना सम्पर्क ठेगाना र फोन सम्पर्कको इतिहास हेर्ने अनुमति दिनुहोस्"</string>
@@ -858,6 +859,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"जडान गर्न सकिएन। फेरि प्रयास गर्नुहोस्।"</string>
     <string name="device_details_title" msgid="1155622417516195481">"डिभाइसको विवरण"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"डिभाइसको ब्लुटुथ एड्रेस: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"डिभाइसको ब्लुटुथ ठेगाना: \n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"डिभाइस बिर्सने हो?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"डिस्कनेक्ट गर्नुहोस्"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"एप डिस्कनेक्ट गर्ने हो?"</string>
@@ -890,6 +892,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"सेटिङहरू सम्झनुहोस्"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"जडान भएका ब्लुटुथ अडियो डिभाइसहरूको अधिकतम सङ्ख्या"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"जडान भएका ब्लुटुथ अडियो डिभाइसहरूको अधिकतम सङ्ख्या चयन गर्नुहोस्"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"NFC स्ट्याकको डिबग लग"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC स्ट्याकको लगिङ लेभल बढाउनुहोस्"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"Cast"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"स्क्रिन मिरर गर्नुहोस्"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"वायरलेस प्रदर्शन सक्षम गर्नुहोस्"</string>
@@ -3580,7 +3584,7 @@
     <string name="keywords_display_auto_brightness" msgid="7162942396941827998">"मधुरो स्क्रिन, टचस्क्रिन, ब्याट्री, स्मार्ट चमक, गतिशील चमक, स्वतः चमक"</string>
     <string name="keywords_display_adaptive_sleep" msgid="4905300860114643966">"स्मार्ट, मधुरो स्क्रिन मोड, स्लिप, ब्याट्री, टाइम आउट, स्क्रिनमा हेरिरहेको पहिचान गर्ने सुविधा, डिस्प्ले, स्क्रिन, निष्क्रियता"</string>
     <string name="keywords_auto_rotate" msgid="7288697525101837071">"क्यामेरा, स्मार्ट, अटो रोटेट, रोटेट, फ्लिप, रोटेसन, पोर्ट्रेट, ल्यान्डस्केप, ओरियन्टेसन, ठाडो, तेर्सो"</string>
-    <string name="keywords_system_update_settings" msgid="5769003488814164931">"स्तरवृद्धि गर्नुहोस्, android"</string>
+    <string name="keywords_system_update_settings" msgid="5769003488814164931">"अपग्रेड गर्नुहोस्, android"</string>
     <string name="keywords_zen_mode_settings" msgid="7810203406522669584">"dnd, समयतालिका, सूचनाहरू, रोक लगाउनुहोस्, माैन, कम्पन, शयन अवस्थामा लानुहोस्, कार्य, फोकस, आवाज, म्युट गर्नुहोस्, दिन, काम गर्ने दिन, सप्ताहान्त, काम गर्ने रात, कार्यक्रम"</string>
     <string name="keywords_screen_timeout" msgid="8921857020437540572">"स्क्रिन, लक समय, टाइमआउट, लकस्क्रिन"</string>
     <string name="keywords_storage_settings" msgid="6018856193950281898">"मेमोरी, क्यास, डेटा, मेट्नुहोस्, खाली गर्नुहोस्, खाली, ठाउँ"</string>
@@ -4014,7 +4018,7 @@
     <string name="app_notification_block_summary" msgid="1804611676339341551">"यी सूचनाहरू कहिल्यै नदेखाउनुहोस्"</string>
     <string name="notification_content_block_title" msgid="6689085826061361351">"सूचनाहरू देखाउनुहोस्"</string>
     <string name="notification_content_block_summary" msgid="329171999992248925">"ओझेलमा वा पेरिफेरल यन्त्रहरूमा कहिल्यै सूचनाहरू नदेखाउनुहोस्"</string>
-    <string name="notification_badge_title" msgid="6854537463548411313">"सूचना जनाउने नयाँ सूचना आएको जनाउने थोप्लो देखाउन दिइयोस्"</string>
+    <string name="notification_badge_title" msgid="6854537463548411313">"नयाँ सूचना आएको जनाउने थोप्लो देखाउन दिइयोस्"</string>
     <string name="notification_channel_badge_title" msgid="6505542437385640049">"सूचना जनाउने थोप्लो देखाइयोस्"</string>
     <string name="app_notification_override_dnd_title" msgid="3769539356442226691">"बाधा नपुर्याउनुहोस् नामक सुविधा ओभरराइड गरियोस्"</string>
     <string name="app_notification_override_dnd_summary" msgid="4894641191397562920">"बाधा नपुर्‍याउनुहोस् नामक सुविधा अन भएका बेला पनि यी सूचना आइरहन दिइयोस्"</string>
