--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -212,7 +212,7 @@
       <item quantity="other">Geselecteerde talen verwijderen?</item>
       <item quantity="one">Geselecteerde taal verwijderen?</item>
     </plurals>
-    <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Tekst wordt weergegeven in een andere taal."</string>
+    <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Tekst wordt getoond in een andere taal."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Kan niet alle talen verwijderen"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Behoud minimaal één voorkeurstaal"</string>
     <string name="locale_not_translated" msgid="5079729745235316146">"Mogelijk niet beschikbaar in sommige apps"</string>
@@ -825,6 +825,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"Je moet deze pincode wellicht ook opgeven op het andere apparaat."</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"Je moet deze toegangscode wellicht ook opgeven op het andere apparaat."</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"Koppelen met:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Zorg ervoor dat de volgende toegangscode wordt vermeld:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"Bevestigen om te koppelen met de gecoördineerde set"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"Van:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Koppelen met dit apparaat?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"Koppelen met:<xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g>Typ het volgende:<xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g> en druk op Enter."</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"Toegang geven tot je contacten en gespreksgeschiedenis"</string>
@@ -858,6 +859,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"Kan geen verbinding maken. Probeer het opnieuw."</string>
     <string name="device_details_title" msgid="1155622417516195481">"Apparaatgegevens"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Bluetooth-adres van je apparaat: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Bluetooth-adres van apparaat:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Apparaat vergeten?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"Koppeling verwijderen"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"App ontkoppelen?"</string>
@@ -890,6 +892,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"Instellingen onthouden"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Maximum aantal verbonden bluetooth-audioapparaten"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Selecteer het maximum aantal verbonden Bluetooth-audioapparaten"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"Foutopsporingslogboek voor NFC-stack"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Registratieniveau voor NFC-stack verhogen"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"Casten"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"mirroren"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"Draadloze weergave aanzetten"</string>
@@ -5047,7 +5051,7 @@
     <string name="zen_suggestion_title" msgid="4555260320474465668">"\'Niet storen\' updaten"</string>
     <string name="zen_suggestion_summary" msgid="1984990920503217">"Meldingen onderbreken om gefocust te blijven"</string>
     <string name="disabled_feature" msgid="7151433782819744211">"De functie is niet beschikbaar"</string>
-    <string name="disabled_feature_reason_slow_down_phone" msgid="5743569256308510404">"Deze functie staat uit omdat je telefoon erdoor wordt vertraagd"</string>
+    <string name="disabled_feature_reason_slow_down_phone" msgid="5743569256308510404">"Deze functie is uitgezet omdat je telefoon erdoor wordt vertraagd"</string>
     <string name="show_first_crash_dialog" msgid="1696584857732637389">"Altijd een crashvenster tonen"</string>
     <string name="show_first_crash_dialog_summary" msgid="4692334286984681111">"Toon altijd een venster bij gecrashte apps"</string>
     <string name="angle_enabled_app" msgid="6044941043384239076">"App met ANGLE-functionaliteit selecteren"</string>
