--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -303,10 +303,10 @@
     <string name="location_settings_primary_switch_title" msgid="8849081766644685127">"Włącz lokalizację"</string>
     <string name="location_settings_summary_location_off" msgid="4797932754681162262">"Wyłączono"</string>
     <plurals name="location_settings_summary_location_on" formatted="false" msgid="1019959038518185676">
-      <item quantity="few">Włączono – <xliff:g id="COUNT_1">%1$d</xliff:g> aplikacje mają dostęp do lokalizacji</item>
-      <item quantity="many">Włączono – <xliff:g id="COUNT_1">%1$d</xliff:g> aplikacji ma dostęp do lokalizacji</item>
-      <item quantity="other">Włączono – <xliff:g id="COUNT_1">%1$d</xliff:g> aplikacji ma dostęp do lokalizacji</item>
-      <item quantity="one">Włączono – <xliff:g id="COUNT_0">%1$d</xliff:g> aplikacja ma dostęp do lokalizacji</item>
+      <item quantity="few">Włączona – <xliff:g id="COUNT_1">%1$d</xliff:g> aplikacje mają dostęp do lokalizacji</item>
+      <item quantity="many">Włączona – <xliff:g id="COUNT_1">%1$d</xliff:g> aplikacji ma dostęp do lokalizacji</item>
+      <item quantity="other">Włączona – <xliff:g id="COUNT_1">%1$d</xliff:g> aplikacji ma dostęp do lokalizacji</item>
+      <item quantity="one">Włączona – <xliff:g id="COUNT_0">%1$d</xliff:g> aplikacja ma dostęp do lokalizacji</item>
     </plurals>
     <string name="location_settings_loading_app_permission_stats" msgid="6054103701535557342">"Wczytuję…"</string>
     <string name="location_settings_footer_general" msgid="1040507068701188821">"Aplikacje z uprawnieniami dostępu do urządzeń w pobliżu mogą określać położenie połączonych urządzeń względem siebie."</string>
@@ -859,6 +859,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"Może być również konieczne wpisanie tego kodu PIN na drugim urządzeniu."</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"Może być również konieczne wpisanie tego klucza na drugim urządzeniu."</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"Aby sparować z urządzeniem:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Upewnij się, że jest na nim wyświetlony następujący klucz:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"Potwierdź, aby sparować ze skoordynowanym zestawem"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"Od:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Sparować z tym urządzeniem?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"Aby sparować z urządzeniem <xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g>, wpisz na nim klucz <xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g>, a następnie naciśnij klawisz zatwierdzania."</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"Zezwól na dostęp do kontaktów i historii połączeń"</string>
@@ -892,6 +893,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"Nie udało się nawiązać połączenia. Spróbuj ponownie."</string>
     <string name="device_details_title" msgid="1155622417516195481">"Szczegóły urządzenia"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Adres Bluetooth urządzenia: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Adres Bluetooth urządzenia: \n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Zapomnieć urządzenie?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"Usuń powiązanie"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"Odłączyć aplikację?"</string>
@@ -924,6 +926,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"Zapamiętaj ustawienia"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Maksymalna liczba podłączonych urządzeń audio Bluetooth"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Wybierz maksymalną liczbę podłączonych urządzeń audio Bluetooth"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"Dziennik debugowania stosów NFC"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Zwiększ poziom rejestrowania stosów NFC"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"Przesyłanie ekranu"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"odbicie lustrzane"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"Wyświetlacz bezprzewodowy"</string>
@@ -1010,8 +1014,8 @@
     <string name="wifi_cellular_data_fallback_summary" msgid="7039944853033554386">"Używaj mobilnej transmisji danych, gdy sieć Wi-Fi nie ma dostępu do internetu. Mogą obowiązywać opłaty za użycie danych."</string>
     <string name="wifi_add_network" msgid="4178564862173751181">"Dodaj sieć"</string>
     <string name="wifi_configure_settings_preference_title" msgid="2536725796700696566">"Ustawienia Wi‑Fi"</string>
-    <string name="wifi_configure_settings_preference_summary_wakeup_on" msgid="7822368955551467382">"Wi‑Fi włączy się automatycznie"</string>
-    <string name="wifi_configure_settings_preference_summary_wakeup_off" msgid="5710203586018223864">"Wi‑Fi nie włączy się automatycznie"</string>
+    <string name="wifi_configure_settings_preference_summary_wakeup_on" msgid="7822368955551467382">"Wi‑Fi włącza się automatycznie"</string>
+    <string name="wifi_configure_settings_preference_summary_wakeup_off" msgid="5710203586018223864">"Wi‑Fi nie włącza się automatycznie"</string>
     <string name="wifi_access_points" msgid="5846755709207101844">"Sieci Wi-Fi"</string>
     <string name="wifi_menu_more_options" msgid="1236651929987819716">"Więcej opcji"</string>
     <string name="wifi_menu_p2p" msgid="5234165837732940385">"Wi‑Fi Direct"</string>
@@ -1532,7 +1536,7 @@
     <string name="kernel_version" msgid="3513538109381366881">"Wersja jądra"</string>
     <string name="build_number" msgid="9009733242117579826">"Numer kompilacji"</string>
     <string name="module_version" msgid="1787518340082046658">"Aktualizacja systemowa Google Play"</string>
-    <string name="device_info_not_available" msgid="4804474466616712326">"Niedostępna"</string>
+    <string name="device_info_not_available" msgid="4804474466616712326">"Niedostępny"</string>
     <string name="device_status_activity_title" msgid="1812666241137263882">"Stan telefonu"</string>
     <string name="device_status" msgid="7988547478034984649">"Stan telefonu"</string>
     <string name="device_status_summary" product="tablet" msgid="8826216824111648900">"Stan baterii, sieci i inne informacje"</string>
@@ -2730,7 +2734,7 @@
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Wyższe wykorzystanie baterii"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Zobacz aplikacje, które najbardziej wykorzystują baterię"</string>
     <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Ładowanie tymczasowo ograniczone"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Aby zmniejszyć zużycie baterii. Więcej informacji."</string>
+    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Aby wydłużyć żywotność baterii. Więcej informacji."</string>
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Wznów ładowanie"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"W niektórych warunkach (np. przy długotrwałym ładowaniu i wysokiej temperaturze) ładowanie może być ograniczone do <xliff:g id="PERCENT">%1$s</xliff:g>, ponieważ pomaga to utrzymać baterię w dobrym stanie.\n\nGdy te warunki się zmienią, telefon automatycznie przejdzie do normalnego ładowania."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"W niektórych warunkach (np. przy długotrwałym ładowaniu i wysokiej temperaturze) ładowanie może być ograniczone do <xliff:g id="PERCENT">%1$s</xliff:g>, ponieważ pomaga to utrzymać baterię w dobrym stanie.\n\nGdy te warunki się zmienią, telefon automatycznie przejdzie do normalnego ładowania."</string>
@@ -3844,7 +3848,7 @@
     <string name="conversation_notifs_category" msgid="2549844862379963273">"Rozmowa"</string>
     <string name="recent_notifications" msgid="1105631022180160436">"Ostatnio wysłane"</string>
     <string name="recent_notifications_see_all_title" msgid="3087299996651692987">"Zobacz wszystkie z ostatnich 7 dni"</string>
-    <string name="general_notification_header" msgid="3669031068980713359">"Zarządzaj"</string>
+    <string name="general_notification_header" msgid="3669031068980713359">"Zarządzanie"</string>
     <string name="app_notification_field" msgid="3858667320444612716">"Ustawienia aplikacji"</string>
     <string name="app_notification_field_summary" msgid="5981393613897713471">"Zarządzaj powiadomieniami z poszczególnych aplikacji"</string>
     <string name="advanced_section_header" msgid="6478709678084326738">"Ogólne"</string>
@@ -3916,7 +3920,7 @@
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"Gdy profil służbowy jest zablokowany"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Powiadomienia na ekranie blokady"</string>
     <string name="lock_screen_notifs_show_all" msgid="1300418674456749664">"Pokazuj rozmowy, domyślne i ciche"</string>
-    <string name="lock_screen_notifs_show_alerting" msgid="6584682657382684566">"Ukryj ciche rozmowy i powiadomienia"</string>
+    <string name="lock_screen_notifs_show_alerting" msgid="6584682657382684566">"Ukrywaj ciche rozmowy i powiadomienia"</string>
     <string name="lock_screen_notifs_show_none" msgid="1941044980403067101">"Nie pokazuj żadnych powiadomień"</string>
     <string name="lock_screen_notifs_redact" msgid="9024158855454642296">"Powiadomienia poufne"</string>
     <string name="lock_screen_notifs_redact_summary" msgid="1395483766035470612">"Pokazuj treści poufne po zablokowaniu"</string>
@@ -4017,7 +4021,7 @@
       <item quantity="one">%d aplikacja może odczytywać powiadomienia</item>
     </plurals>
     <string name="notification_assistant_title" msgid="5889201903272393099">"Ulepszone powiadomienia"</string>
-    <string name="notification_assistant_summary" msgid="1957783114840908887">"Otrzymuj sugestie działań oraz odpowiedzi i inne podpowiedzi"</string>
+    <string name="notification_assistant_summary" msgid="1957783114840908887">"Sugeruj działania, odpowiedzi itd."</string>
     <string name="no_notification_assistant" msgid="2533323397091834096">"Brak"</string>
     <string name="no_notification_listeners" msgid="2839354157349636000">"Żadna z zainstalowanych aplikacji nie prosiła o dostęp do powiadomień."</string>
     <string name="notification_access_detail_switch" msgid="46386786409608330">"Zezwalaj na dostęp do powiadomień"</string>
