--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -844,6 +844,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"Ar putea fi necesar, de asemenea, să introduceți acest cod PIN pe celălalt dispozitiv."</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"Ar putea fi necesar, de asemenea, să introduceți această parolă pe celălalt dispozitiv."</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"Pentru asocierea cu:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;asigurați-vă că se afișează această cheie de acces:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"Confirmați pentru a asocia cu setul coordonat"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"De la:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Asociați cu acest dispozitiv?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"Pentru împerecherea cu:<xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g>Introduceți pe acesta:<xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g>, apoi apăsați tasta Return sau Enter."</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"Permiteți accesul la agendă și la istoricul apelurilor"</string>
@@ -877,6 +878,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"Nu s-a putut conecta. Încercați din nou."</string>
     <string name="device_details_title" msgid="1155622417516195481">"Detalii despre dispozitiv"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Adresa Bluetooth a dispozitivului: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Adresa Bluetooth a dispozitivului: \n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Eliminați dispozitivul?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"Eliminați asocierea"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"Deconectați aplicația?"</string>
@@ -909,6 +911,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"Rețineți setările"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Numărul maxim de dispozitive audio Bluetooth conectate"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Selectați numărul maxim de dispozitive audio Bluetooth conectate"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"Jurnalul de remediere a erorilor pentru stiva NFC"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Măriți nivelul de înregistrare pentru stiva NFC"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"Proiectare"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"oglindă"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"Activați ecranul wireless"</string>
@@ -4372,7 +4376,7 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> de aplicații nefolosite</item>
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g> aplicație nefolosită</item>
     </plurals>
-    <string name="unused_apps_switch" msgid="419282628373205038">"Eliminați permisiuni și eliberați spațiu"</string>
+    <string name="unused_apps_switch" msgid="419282628373205038">"Revocă permisiunile și eliberează spațiu"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Toate aplicațiile"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Aplicații instalate"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Aplicații instantanee"</string>
