--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -859,6 +859,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"Возможно, потребуется ввести PIN-код на другом устройстве."</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"Возможно, потребуется ввести ключ доступа на другом устройстве."</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"Для подключения к устройству&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;на нем должен отображаться этот код доступа:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"Подтвердите, чтобы подключиться к координированному набору."</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"Запрос от: &lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Подключиться к этому устройству?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"Для подключения к устройству <xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g> введите на нем код <xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g>, а затем нажмите клавишу Return или Enter."</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"Разрешить доступ к контактам и журналу звонков"</string>
@@ -892,6 +893,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"Ошибка подключения. Повторите попытку."</string>
     <string name="device_details_title" msgid="1155622417516195481">"Об устройстве"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Адрес Bluetooth этого устройства: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Адрес Bluetooth этого устройства: \n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Удалить устройство?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"Удалить связь"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"Отключить приложение?"</string>
@@ -924,6 +926,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"Запомнить настройки"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Максимальное количество подключенных Bluetooth-аудиоустройств"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Укажите максимальное количество подключенных Bluetooth-аудиоустройств"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"Журнал отладки стека NFC"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Ведение подробного журнала стека NFC"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"Трансляция"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"дублирование"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"Включить"</string>
@@ -3755,7 +3759,7 @@
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"Отключить звук"</string>
     <string name="zen_mode_restrict_notifications_mute_summary" msgid="966597459849580949">"Уведомления будут показываться на экране"</string>
     <string name="zen_mode_restrict_notifications_mute_footer" msgid="2152115038156049608">"Уведомления будут приходить без звука и вибрации."</string>
-    <string name="zen_mode_restrict_notifications_hide" msgid="5997930361607752541">"Полностью отключить"</string>
+    <string name="zen_mode_restrict_notifications_hide" msgid="5997930361607752541">"Отключить звук и отображение уведомлений"</string>
     <string name="zen_mode_restrict_notifications_hide_summary" msgid="6005445725686969583">"Уведомления будут полностью отключены"</string>
     <string name="zen_mode_restrict_notifications_hide_footer" msgid="4314772315731485747">"Уведомления будут скрыты, а при их получении телефон не будет вибрировать или издавать звуковой сигнал. Важные системные уведомления все равно будут появляться.\n\nЧтобы посмотреть скрытые уведомления после отключения режима \"Не беспокоить\", проведите по экрану сверху вниз."</string>
     <string name="zen_mode_restrict_notifications_custom" msgid="5469078057954463796">"Специальные настройки"</string>
@@ -3763,7 +3767,7 @@
     <string name="zen_mode_restrict_notifications_disable_custom" msgid="5062332754972217218">"Отключить специальные настройки"</string>
     <string name="zen_mode_restrict_notifications_summary_muted" msgid="4750213316794189968">"Отключить звук уведомлений"</string>
     <string name="zen_mode_restrict_notifications_summary_custom" msgid="3918461289557316364">"Скрывать частично"</string>
-    <string name="zen_mode_restrict_notifications_summary_hidden" msgid="636494600775773296">"Полностью отключить уведомления"</string>
+    <string name="zen_mode_restrict_notifications_summary_hidden" msgid="636494600775773296">"Отключить звук и отображение уведомлений"</string>
     <string name="zen_mode_what_to_block_title" msgid="5692710098205334164">"Специальные ограничения"</string>
     <string name="zen_mode_block_effects_screen_on" msgid="8780668375194500987">"При включенном экране"</string>
     <string name="zen_mode_block_effects_screen_off" msgid="2291988790355612826">"При отключенном экране"</string>
@@ -3820,7 +3824,7 @@
     <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"В режиме \"Не беспокоить\" сообщения, напоминания и уведомления о мероприятиях будут приходить без звука (за исключением тех, для которых вы задали разрешения выше). Вы можете изменить настройки, чтобы сообщения от членов семьи, друзей и других контактов приходили со звуком."</string>
     <string name="zen_onboarding_ok" msgid="8764248406533833392">"ОК"</string>
     <string name="zen_onboarding_settings" msgid="2815839576245114342">"Настройки"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Полностью отключить уведомления"</string>
+    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Отключить звук и отображение уведомлений"</string>
     <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Отключить звук уведомлений"</string>
     <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Уведомления будут полностью отключены. Вы сможете получать звонки только от помеченных контактов и от людей, звонящих повторно."</string>
     <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(выбрано)"</string>
@@ -3845,7 +3849,7 @@
     <string name="recent_notifications" msgid="1105631022180160436">"Недавние уведомления"</string>
     <string name="recent_notifications_see_all_title" msgid="3087299996651692987">"Смотреть все за последние 7 дней"</string>
     <string name="general_notification_header" msgid="3669031068980713359">"Управление"</string>
-    <string name="app_notification_field" msgid="3858667320444612716">"Настройки приложения"</string>
+    <string name="app_notification_field" msgid="3858667320444612716">"Настройки приложений"</string>
     <string name="app_notification_field_summary" msgid="5981393613897713471">"Управление уведомлениями отдельных приложений"</string>
     <string name="advanced_section_header" msgid="6478709678084326738">"Общие"</string>
     <string name="profile_section_header" msgid="4970209372372610799">"Рабочие уведомления"</string>
@@ -4007,7 +4011,7 @@
     </plurals>
     <string name="notifications_sent_never" msgid="9081278709126812062">"Никогда"</string>
     <string name="manage_notification_access_title" msgid="6481256069087219982">"Уведомления на устройствах и в приложениях"</string>
-    <string name="manage_notification_access_summary" msgid="2907135226478903997">"Укажите, какие приложения могут просматривать уведомления"</string>
+    <string name="manage_notification_access_summary" msgid="2907135226478903997">"Выбрать приложения и устройства, у которых есть доступ к уведомлениям"</string>
     <string name="work_profile_notification_access_blocked_summary" msgid="8643809206612366067">"Доступ к уведомлениям в рабочем профиле заблокирован"</string>
     <string name="manage_notification_access_summary_zero" msgid="7528633634628627431">"Приложения не могут просматривать уведомления"</string>
     <plurals name="manage_notification_access_summary_nonzero" formatted="false" msgid="3703008881487586312">
