--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -842,6 +842,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"Можда ће бити потребно да унесете овај PIN и на другом уређају."</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"Можда ће бити потребно да унесете овај приступни кôд и на другом уређају."</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"Да бисте се упарили са уређајем:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Уверите се да приказује овај приступни кôд:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"Потврдите ради упаривања са координисаним скупом"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"Са уређаја:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Желите ли да се упарите са тим уређајем?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"За упаривање са уређајем:<xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g>Унесите на њему:<xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g>, а затим притисните Return или Enter."</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"Дозволи приступ контактима и историји позива"</string>
@@ -875,6 +876,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"Повезивање није успело. Покушајте поново."</string>
     <string name="device_details_title" msgid="1155622417516195481">"Детаљи о уређају"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Bluetooth адреса уређаја: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Bluetooth адреса уређаја:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Желите ли да заборавите уређај?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"Уклони повезивање"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"Желите да прекинете везу са апликацијом?"</string>
@@ -907,6 +909,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"Запамти подешавања"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Максималан број повезаних Bluetooth аудио уређаја"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Изаберите максимални број повезаних Bluetooth аудио уређаја"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"Евиденција отклањања грешака за NFC групу"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Повећајте ниво евиденције за NFC групу"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"Пребацивање"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"пресликати"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"Омогући бежични приказ"</string>
@@ -2699,7 +2703,7 @@
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Највећа потрошња батерије"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Погледајте апликације са највећом потрошњом батерије"</string>
     <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Пуњење је привремено ограничено"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"За уштеду батерије. Сазнајте више."</string>
+    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Да би се сачувала батерија. Сазнајте више."</string>
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Настави са пуњењем"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"У одређеним условима, на пример, високе температуре и дуги периоди пуњења, пуњење може да буде ограничено на <xliff:g id="PERCENT">%1$s</xliff:g> ради бољег стања батерије.\n\nКада ти услови престану, телефон ће аутоматски почети нормално да се пуни."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"У одређеним условима, на пример, високе температуре и дуги периоди пуњења, пуњење може да буде ограничено на <xliff:g id="PERCENT">%1$s</xliff:g> ради бољег стања батерије.\n\nКада ти услови престану, таблет ће аутоматски почети нормално да се пуни."</string>
