--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -825,6 +825,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"Bu PIN\'i diğer cihazda da yazmanız gerekebilir."</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"Bu parolayı diğer cihazda da girmeniz gerekebilir."</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"Şu cihazla eşlemek için:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Şu parolanın göründüğünden emin olun:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"Koordine grupla eşlemeyi onaylayın"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"Kaynak:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Bu cihaz ile eşlensin mi?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"<xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g> ile eşlemek için cihaz üzerinde <xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g> yazarak Return veya Enter tuşuna basın."</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"Kişilerime ve çağrı geçmişime erişime izin ver"</string>
@@ -858,6 +859,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"Bağlanılamadı. Tekrar deneyin."</string>
     <string name="device_details_title" msgid="1155622417516195481">"Cihaz ayrıntıları"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Cihazın Bluetooth adresi: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Cihazın Bluetooth adresi:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Cihaz unutulsun mu?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"İlişkilendirmeyi kaldır"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"Uygulamanın Bağlantısı Kesilsin Mi?"</string>
@@ -890,6 +892,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"Ayarları anımsa"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Maksimum sayıda bağlı Bluetooth ses cihazı"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Maksimum sayıda bağlı Bluetooth ses cihazı seç"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"NFC yığını hata ayıklama günlüğü"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"NFC yığını günlük kaydı seviyesini artırın"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"Yayınlama"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"ayna"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"Kablosuz görüntülemeyi etkinleştir"</string>
@@ -1334,7 +1338,7 @@
     <string name="auto_brightness_very_high_title" msgid="4935132626750630713">"Çok yüksek"</string>
     <string name="auto_brightness_subtitle" msgid="6839449395639517870">"Tercih ettiğiniz parlaklık düzeyi"</string>
     <string name="auto_brightness_off_summary" msgid="4993150980274474226">"Mevcut ışık için ayarlama"</string>
-    <string name="auto_brightness_very_high_summary" msgid="2784981315548144255">"Daha fazla pil kullanımı"</string>
+    <string name="auto_brightness_very_high_summary" msgid="2784981315548144255">"Yüksek pil kullanımı"</string>
     <string name="auto_brightness_disclaimer" msgid="1868395832774087351">"Parlaklık düzeyini mevcut ışık için optimize edin. Bu özellik açık olduğunda parlaklığı geçici olarak ayarlamaya devam edebilirsiniz."</string>
     <string name="auto_brightness_description" msgid="6807117118142381193">"Ekranınızın parlaklığı, bulunduğunuz ortama ve aktivitelerinize göre otomatik olarak ayarlanır. Otomatik parlaklık özelliğinin tercihlerinizi öğrenmesine yardımcı olmak için kaydırma çubuğunu manuel olarak hareket ettirebilirsiniz."</string>
     <string name="display_white_balance_title" msgid="2624544323029364713">"Beyaz dengeyi göster"</string>
@@ -1433,7 +1437,7 @@
     <string name="doze_title" msgid="1523090408230862316">"Bildirimlerde ekranı uyandır"</string>
     <string name="doze_summary" msgid="8252867381522942804">"Ekran karanlıkken yeni bildirimler için açılır"</string>
     <string name="doze_always_on_title" msgid="7326245192352868477">"Saati ve bilgiyi daima göster"</string>
-    <string name="doze_always_on_summary" msgid="509097829739647852">"Daha fazla pil kullanımı"</string>
+    <string name="doze_always_on_summary" msgid="509097829739647852">"Yüksek pil kullanımı"</string>
     <string name="force_bold_text" msgid="4620929631102086716">"Kalın metin"</string>
     <string name="title_font_size" msgid="570613010306330622">"Yazı tipi boyutu"</string>
     <string name="short_summary_font_size" msgid="184712645848458143">"Metni daha büyük veya daha küçük yapın"</string>
@@ -2665,7 +2669,7 @@
     <string name="battery_tip_early_heads_up_done_title" msgid="7705597228709143337">"Pil Tasarrufu açık"</string>
     <string name="battery_saver_link_a11y" msgid="740558184830458845">"Pil tasarrufu hakkında daha fazla bilgi edinin"</string>
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"Bazı özellikler sınırlı olabilir"</string>
-    <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Daha fazla pil kullanımı"</string>
+    <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Yüksek pil kullanımı"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"En fazla pil kullanan uygulamaları göster"</string>
     <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Şarj etme geçici olarak sınırlı"</string>
     <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Pilinizi korumak için. Daha fazla bilgi edinin."</string>
