--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -859,6 +859,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"Також потрібно ввести цей PIN-код на іншому пристрої."</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"Також потрібно ввести цей ключ доступу на іншому пристрої."</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"Щоб створити пару з пристроєм:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Переконайтеся, що відображається цей ключ доступу:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"Підтвердьте, щоб підключатися до набору узгоджених пристроїв"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"Від пристрою:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Створити пару з цим пристроєм?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"Щоб створити пару з пристроєм: <xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g> Введіть на ньому: <xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g>, а потім натисніть \"Повернутися\" або \"Ввійти\"."</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"Дозволити доступ до контактів та історії викликів"</string>
@@ -892,6 +893,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"Не вдалося під’єднатися. Повторіть спробу."</string>
     <string name="device_details_title" msgid="1155622417516195481">"Про пристрій"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Адреса Bluetooth пристрою: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Адреса Bluetooth пристрою:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Забути пристрій?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"Вилучити зв’язок"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"Від’єднати додаток?"</string>
@@ -924,6 +926,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"Запам\'ятати налашт."</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Максимальна кількість підключених аудіопристроїв Bluetooth"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Вибрати максимальну кількість підключених аудіопристроїв Bluetooth"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"Журнал налагодження стеку NFC"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Підвищити рівень реєстрації в журналі стеку NFC"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"Трансляція"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"дзеркалювання"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"Увімкнути бездротовий екран"</string>
@@ -1880,7 +1884,7 @@
     <string name="mobile_connect_to_internet" msgid="8162654404357069060">"Під’єднайтеся до Інтернету"</string>
     <string name="location_category_recent_location_requests" msgid="2205900488782832082">"Останні запити на геодані"</string>
     <string name="location_recent_location_requests_see_all" msgid="7918405176741692524">"Показати всі"</string>
-    <string name="location_category_location_services" msgid="8163798686832434284">"Служби локації"</string>
+    <string name="location_category_location_services" msgid="8163798686832434284">"Геолокація"</string>
     <string name="location_title" msgid="5819154746934945021">"Моє місцезнах."</string>
     <string name="managed_profile_location_switch_title" msgid="1265007506385460066">"Геодані для робочого профілю"</string>
     <string name="location_app_level_permissions" msgid="907206607664629759">"Доступ додатків до геоданих"</string>
@@ -1902,8 +1906,8 @@
     <string name="location_scanning_wifi_always_scanning_description" msgid="6236055656376931306">"Дозволити додаткам і сервісам будь-коли шукати мережі Wi-Fi, навіть якщо Wi-Fi вимкнено. Це може покращити роботу функцій і сервісів, які використовують геодані."</string>
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="1809309545730215891">"Шукати пристрої Bluetooth"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="5362988856388462841">"Дозволити додаткам і сервісам будь-коли шукати пристрої поруч, навіть якщо Bluetooth вимкнено. Це може покращити роботу функцій і сервісів, які використовують геодані."</string>
-    <string name="location_services_preference_title" msgid="604317859531782159">"Служби локації"</string>
-    <string name="location_services_screen_title" msgid="5640002489976602476">"Служби локації"</string>
+    <string name="location_services_preference_title" msgid="604317859531782159">"Геолокація"</string>
+    <string name="location_services_screen_title" msgid="5640002489976602476">"Геолокація"</string>
     <string name="managed_profile_location_services" msgid="8172092734138341880">"Служби локації для роботи"</string>
     <string name="location_time_zone_detection_toggle_title" msgid="6518338597250564260">"Визначати часовий пояс за місцезнаходженням"</string>
     <string name="location_time_zone_detection_location_is_off_dialog_title" msgid="231698690198001146">"Потрібен доступ до геоданих пристрою"</string>
@@ -3915,7 +3919,7 @@
     <string name="keywords_lockscreen_bypass" msgid="41035425468915498">"Заблокований екран, екран блокування, пропустити, обходити"</string>
     <string name="locked_work_profile_notification_title" msgid="279367321791301499">"Коли робочий профіль заблоковано"</string>
     <string name="lock_screen_notifs_title" msgid="3412042692317304449">"Сповіщення на заблокованому екрані"</string>
-    <string name="lock_screen_notifs_show_all" msgid="1300418674456749664">"Показувати розмови (за умовчанням і беззвучні)"</string>
+    <string name="lock_screen_notifs_show_all" msgid="1300418674456749664">"Показувати розмови та сповіщення (за умовчанням і беззвучні)"</string>
     <string name="lock_screen_notifs_show_alerting" msgid="6584682657382684566">"Приховати беззвучні розмови та сповіщення"</string>
     <string name="lock_screen_notifs_show_none" msgid="1941044980403067101">"Не показувати сповіщення"</string>
     <string name="lock_screen_notifs_redact" msgid="9024158855454642296">"Конфіденційні сповіщення"</string>
