--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -825,6 +825,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"‏آپ کو دوسرے آلہ پر بھی یہ PIN ٹائپ کرنے کی ضرورت پڑ سکتی ہے۔"</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"آپ کو دیگر آلہ پر بھی اس پاس کلید کو ٹائپ کرنے کی ضرورت ہو سکتی ہے۔"</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"‏اس کے ساتھ جوڑا بنانے کیلئے:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;اس بات کو یقینی بنائیں کہ یہ اس پاس کلید کو دکھا رہا ہے:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"مربوط سیٹ کے ساتھ جوڑا بنانے کی تصدیق کریں"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"‏منجانب:‎&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;‎اس آلہ کے ساتھ جوڑا بنائیں؟"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"اس کے ساتھ جوڑا بنانے کیلئے:<xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g>اس پر ٹائپ کریں:<xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g>, پھر واپس جائیں یا انٹر کریں کو دبائیں۔"</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"اپنے رابطوں اور کال کی سرگزشت تک رسائی کی اجازت دیں"</string>
@@ -858,6 +859,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"منسلک نہیں ہو سکا۔ دوبارہ کوشش کریں۔"</string>
     <string name="device_details_title" msgid="1155622417516195481">"آلہ کی تفصیلات"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"آلے کا بلوٹوتھ پتہ: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"آلے کا بلوٹوتھ پتہ:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"آلہ بھولنا ہے؟"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"وابستگی ہٹائیں"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"ایپ کو غیر منسلک کریں؟"</string>
@@ -890,6 +892,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"ترتیبات کو یاد رکھیں"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"زیادہ سے زیادہ منسلک بلوٹوتھ آڈیو آلات"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"منسلک بلوٹوتھ آڈیو آلات کی زیادہ سے زیادہ تعداد منتخب کریں"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"‏NFC انبار ڈیبگ لاگ"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"‏NFC انبار کا لاگ ان لیول بڑھائیں"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"کاسٹ کریں"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"مرر"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"وائرلیس ڈسپلے فعال کریں"</string>
@@ -2670,8 +2674,8 @@
     <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"چارجنگ عارضی طور پر محدود ہے"</string>
     <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"آپ کی بیٹری کو محفوظ رکھنے کے لیے۔ مزید جانیں۔"</string>
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"چارج کرنا دوبارہ شروع کریں"</string>
-    <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"اعلی درجہ حرارت اور چارجنگ کی طویل مدتوں جیسی مخصوص شرائط میں، چارجنگ بیٹری کی صحت کی حفاظت میں مدد کے لیے <xliff:g id="PERCENT">%1$s</xliff:g> تک محدود ہو سکتی ہے۔\n\nان شرائط کے ختم ہونے پر آپ کا فون عام طور پر خودکار طور پر چارج ہوگا۔"</string>
-    <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"اعلی درجہ حرارت اور چارجنگ کی طویل مدتوں جیسی مخصوص شرائط میں، چارجنگ بیٹری کی صحت کی حفاظت میں مدد کے لیے <xliff:g id="PERCENT">%1$s</xliff:g> تک محدود ہو سکتی ہے۔\n\nان شرائط کے ختم ہونے پر آپ کا ٹیبلیٹ عام طور پر خودکار طور پر چارج ہوگا۔"</string>
+    <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"بہت زیادہ درجہ حرارت اور چارجنگ کی طویل مدتوں جیسے مخصوص حالات میں، چارجنگ بیٹری کی صحت کی حفاظت میں مدد کے لیے <xliff:g id="PERCENT">%1$s</xliff:g> تک محدود ہو سکتی ہے۔\n\nان حالات کے ختم ہونے پر آپ کا فون نارمل طریقے سے خودکار طور پر چارج ہوگا۔"</string>
+    <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"بہت زیادہ درجہ حرارت اور چارجنگ کی طویل مدتوں جیسے مخصوص حالات میں، چارجنگ بیٹری کی صحت کی حفاظت میں مدد کے لیے <xliff:g id="PERCENT">%1$s</xliff:g> تک محدود ہو سکتی ہے۔\n\nان حالات کے ختم ہونے پر آپ کا ٹیبلیٹ نارمل طریقے سے خودکار طور پر چارج ہوگا۔"</string>
     <string name="battery_tip_dialog_message" product="default" msgid="4592387206991500075">"کیونکہ آپ نے اپنا فون معمول سے زیادہ استعمال کیا ہے آپ کی بیٹری اس سے معمول کے مطابق پہلے ختم ہو سکتی ہے\n\nبیشتر بیٹری استعمال کرنے والی ایپس:"</string>
     <string name="battery_tip_dialog_message" product="tablet" msgid="111303605119856034">"کیونکہ آپ نے اپنا ٹیبلیٹ معمول سے زیادہ استعمال کیا ہے آپ کی بیٹری اس سے معمول کے مطابق پہلے ختم ہو سکتی ہے\n\nبیشتر بیٹری استعمال کرنے والی ایپس:"</string>
     <string name="battery_tip_dialog_message" product="device" msgid="3896805213768863874">"کیونکہ آپ نے اپنا آلہ معمول سے زیادہ استعمال کیا ہے آپ کی بیٹری اس سے معمول کے مطابق پہلے ختم ہو سکتی ہے\n\nبیشتر بیٹری استعمال کرنے والی ایپس:"</string>
