--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -827,6 +827,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"Ushbu PIN kodni boshqa qurilmada ham terish lozim bo‘lishi mumkin."</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"Shuningdek, bu kirish kalitini ikkinchi qurilmada kiritishingiz talab qilinishi mumkin."</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;br&gt;&lt;b&gt;bilan biriktirish uchun,&lt;/b&gt;&lt;br&gt;&lt;br&gt;unda mana bu kalit so‘z ko‘rsatilayotganligini tekshiring:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"Sozlangan toʻplamga ulanishni tasdiqlang"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>dan so‘rov&lt;/b&gt;&lt;br&gt;&lt;br&gt;Ushbu qurilma bilan biriktirilsinmi?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"<xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g>bilan biriktirish uchun, uni ekranida:<xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g> terib, Return yoki Enter tugmalarini bosing."</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"Kontakt va chaqiruvlar tarixiga ruxsat berish"</string>
@@ -860,6 +861,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"Ulanilmadi. Qaytadan urining."</string>
     <string name="device_details_title" msgid="1155622417516195481">"Qurilma tafsilotlari"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Qurilmaning Bluetooth manzili: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Qurilmaning Bluetooth manzili:\n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Qurilma unutilsinmi?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"Birikmani olib tashlash"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"Ilova uzilsinmi?"</string>
@@ -892,6 +894,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"Sozlamalarni eslab qolish"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Maksimum ulangan Bluetooth audio qurilmalar"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Maksimum nechta Bluetooth audio qurilma ulash mumkinligi belgilang"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"Nfc steklarida uchraydigan nosozliklarni tuzatish jurnali"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Nfc steklarini jurnalga yozish darajasini oshirish"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"Translatsiya"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"koʻzgu"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"Simsiz monitorni yoqish"</string>
@@ -2671,7 +2675,7 @@
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Batareyani koʻp sarflayotgan ilovalar"</string>
     <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Quvvatlash vaqtincha cheklangan"</string>
     <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Batareyangizni asrash uchun. Batafsil."</string>
-    <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Toʻliq quvvatlansin"</string>
+    <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Davom ettirish"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"Batareya quvvati yaroqlilik muddatini uzaytirishda yordam berish maqsadida yuqori harorat va uzoq quvvatlash davrlar kabi muayyan shartlarda quvvatlash <xliff:g id="PERCENT">%1$s</xliff:g> gacha cheklanadi.\n\nBu shartlar tugaganda telefoningiz avtomatik ravishda normal quvvat olishni boshlaydi."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"Batareya quvvati yaroqlilik muddatini uzaytirishda yordam berish maqsadida yuqori harorat va uzoq quvvatlash davrlar kabi muayyan shartlarda quvvatlash <xliff:g id="PERCENT">%1$s</xliff:g> gacha cheklanadi.\n\nBu shartlar tugaganda planshetingiz avtomatik ravishda normal quvvat olishni boshlaydi."</string>
     <string name="battery_tip_dialog_message" product="default" msgid="4592387206991500075">"Telefonni odatdagidan koʻp ishlatdingiz, baterya quvvati tezroq tugashi mumkin.\n\nBatareyani eng koʻp sarflayotgan ilovalar:"</string>
