--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -825,6 +825,7 @@
     <string name="bluetooth_enter_pin_other_device" msgid="6737778699899780717">"Kungenzeka futhi udinge ukufaka le-PIN kwenye idivaysi."</string>
     <string name="bluetooth_enter_passkey_other_device" msgid="8270426446247344709">"Kungadingeka ufake lokhiye wokudlula kwenye idivayisi."</string>
     <string name="bluetooth_confirm_passkey_msg" msgid="327192310468680072">"Ukuhambisa ngokubili:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Qinisekisa ukuthi ibonisa ukhiye wokungena:&lt;br&gt;&lt;b&gt;<xliff:g id="PASSKEY">%2$s</xliff:g>&lt;/b&gt;"</string>
+    <string name="bluetooth_paring_group_msg" msgid="4609515924670823316">"Qinisekisa ukuze ubhangqe nesethi ehlanganisiwe"</string>
     <string name="bluetooth_incoming_pairing_msg" msgid="1068123527866596779">"Kusuka ku:&lt;br&gt;&lt;b&gt;<xliff:g id="DEVICE_NAME">%1$s</xliff:g>&lt;/b&gt;&lt;br&gt;&lt;br&gt;Beka eceleni namanye amadivayisi?"</string>
     <string name="bluetooth_display_passkey_pin_msg" msgid="8672803845151786521">"Ukubhangqa ne:<xliff:g id="BOLD1_0">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="DEVICE_NAME">%1$s</xliff:g><xliff:g id="END_BOLD1">&lt;/b&gt;&lt;br&gt;&lt;br&gt;</xliff:g>Thayipha kuyona:<xliff:g id="BOLD2_1">&lt;br&gt;&lt;b&gt;</xliff:g><xliff:g id="PASSKEY">%2$s</xliff:g><xliff:g id="END_BOLD2">&lt;/b&gt;</xliff:g>, bese ucindezela inkinobho uBuyisela noma uNgena."</string>
     <string name="bluetooth_pairing_shares_phonebook" msgid="4329325125260724843">"Vumela ukufinyelela koxhumana nabo nomlando wekholi"</string>
@@ -858,6 +859,7 @@
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"Ayikwazanga ukuxhuma. Zama futhi."</string>
     <string name="device_details_title" msgid="1155622417516195481">"Imininingwane yedivayisi"</string>
     <string name="bluetooth_device_mac_address" msgid="4873325074786732703">"Ikheli le-Bluetooth yedivayisi: <xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
+    <string name="bluetooth_multuple_devices_mac_address" msgid="4974301550897923376">"Ikheli le-Bluetooth yedivayisi: \n<xliff:g id="ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_unpair_dialog_title" msgid="6943633443716052995">"Khohlwa idivayisi?"</string>
     <string name="remove_association_button" msgid="5004208145998061135">"Susa ukuhambisana"</string>
     <string name="bluetooth_companion_app_remove_association_dialog_title" msgid="1344518601377991897">"Nqamula i-App?"</string>
@@ -890,6 +892,8 @@
     <string name="bluetooth_dock_settings_remember" msgid="6993526033095292609">"Khumbula izilungiselelo"</string>
     <string name="bluetooth_max_connected_audio_devices_string" msgid="3114156958598821615">"Amadivayisi omsindo e-Bluetooth axhumekile"</string>
     <string name="bluetooth_max_connected_audio_devices_dialog_title" msgid="4056811727247312473">"Khetha inombolo enkulu yamadivayisi omsindo we-Bluetooth axhumekile"</string>
+    <string name="nfc_stack_debuglog_title" msgid="2926748386805740609">"Ilogu yokususa iphutha lezitaki ze-NFC"</string>
+    <string name="nfc_stack_debuglog_summary" msgid="7333205107551132121">"Khuphula ileveli yokungena yezitaki ze-NFC"</string>
     <string name="wifi_display_settings_title" msgid="6451625615274960175">"Abalingisi"</string>
     <string name="keywords_wifi_display_settings" msgid="5753883229564422679">"isibuko"</string>
     <string name="wifi_display_enable_menu_item" msgid="7391841780777318134">"Nika amandla ukubukeka okungenantambo "</string>
@@ -3694,7 +3698,7 @@
     <string name="zen_mode_block_effect_summary_all" msgid="3131918059492425222">"Umsindo, ukudlidliza, nezimpawu zokubuka zezaziso"</string>
     <string name="zen_mode_blocked_effects_footer" msgid="1115914818435434668">"Izaziso ziyadingeka kumsebenzi wefoni ovamile futhi isimo ngeke sifihlwe sanhlobo."</string>
     <string name="zen_mode_no_exceptions" msgid="1580136061336585873">"Lutho"</string>
-    <string name="zen_mode_other_options" msgid="3399967231522580421">"ezinye izinketho"</string>
+    <string name="zen_mode_other_options" msgid="3399967231522580421">"okunye okungakhethwa"</string>
     <string name="zen_mode_add" msgid="8789024026733232566">"Engeza"</string>
     <string name="zen_mode_enable_dialog_turn_on" msgid="1971034397501675078">"Vula"</string>
     <string name="zen_mode_button_turn_on" msgid="6583862599681052347">"Vula manje"</string>
